--- a/language/ca-ES/ca-ES.plg_system_bfstop.sys.ini
+++ b/language/ca-ES/ca-ES.plg_system_bfstop.sys.ini
@@ -1,80 +1,80 @@
 ; traducció feta per nouespai 29/08/2014
 
 PLG_SYSTEM_BFSTOP="Sistema - Brute Force Stop"
-PLG_BFSTOP_DESC="<h2>Brute Force Stop</ h2><div> Aquest connector proporciona els mitjans per evitar els atacs per força bruta a la teva instal·lació Joomla!. Per això, el connector emmagatzema informació sobre els intents fallits de connexió, de manera que en arribar a un nombre configurable d'intents fallits d'inici de sessió l'adreça IP de l'atacant pot ser bloquejada. A més, pot configurar notificacions sobre intents fallits i les adreces IP bloquejades, així com un retard variable després d'un inici de sessió fallit.</div><br /><div><em>No oblidis de configurar i publicar el connector després de la instal·lació!</em><br />Si tens qualsevol pregunta sobre el connector, visita <a href='https://github.com/codeling/bfstop'>El lloc del projecte a github</a>. Si hi ha algun problema en utilitzar el connector, no dubtis a reportar al <a href='https://github.com/codeling/bfstop/issues'>Seguiment d'incidències.</a></div><br/><div>En algunes parts, aquest connector s'inspira en els següents plugins Login Failed Log, Redirect Failed Logins and Ban IP Address/Range. Moltes gràcies als autors d'aquests connectors!.<br /> Brute Force Stop és un connector <a target='_blank' href='http://www.joomla.org/'>Joomla!,</a> publicat sota la <a target='_blank' title='GNU General Public License' href='http://www.gnu.org/copyleft/gpl.html'>GNU General Public License.</a></div>"
-BLOCK_ENABLED_LABEL="Activar bloqueig"
-BLOCK_ENABLED_DESC="Si aquest connector ha de bloquejar les adreces IP. Quan està desactivat, no s'afegiran noves adreces IP a la llista d'adreces bloquejades, i ni tan sols les adreces IP que ja estan en aquesta llista seran bloquejades més (encara que la llista en si es mantindrà)".
-USERID_LABEL="Selecciona un usuari"
-USERID_DESC="Selecciona l'usuari que desitja tenir notificacions d'enviament."
-EMAIL_ADDRESS_LABEL="Adreça de correu electrònic"
-EMAIL_ADDRESS_DESC="Introdueix l'adreça de correu electrònic on vols tenir notificacions d'enviament."
-NOTIFY_FAILED_NUMBER_LABEL="Missatges d'inici de sessió fallits per dia"
-NOTIFY_FAILED_NUMBER_DESC="Amb quina freqüència es notificaran inicis de sessió fallits en un dia"
-NOTIFY_BLOCKED_NUMBER_LABEL="Missatges de bloqueig per dia"
-NOTIFY_BLOCKED_NUMBER_DESC="Amb quina freqüència es notificaran les IP bloquejades en un dia"
-DELAY_DURATION_LABEL="Retard"
-DELAY_DURATION_DESC="Retard (en segons) en un intent d'accés fallit"
-LOGLEVEL_LABEL="Iniciant sessió"
-LOGLEVEL_DESC="Determina si un informe sobre les activitats del connector ha de ser creat (això tan sols serà necessari en cas d'un problema, el fitxer de registre es pot trobar al directori de registres amb el nom plg_system_bfstop.log.php)"
-BLOCK_NUMBER_LABEL="Límit abans de bloquejar"
-BLOCK_NUMBER_DESC="Quantes vegades un usuari pot equivocar-se abans de que es bloquegi la IP"
-BLOCKED_MESSAGE_LABEL="Missatge de bloqueig"
-BLOCKED_MESSAGE_DESC="El missatge que voleu que aparegui a la finestra del navegador d'un usuari la direcció IP del qual ha estat bloquejada a causa de massa intents de connexió fallits. Si es deixa buida, es mostrarà aquest missatge per defecte: La seva adreça IP ha estat bloquejada a causa de haver massa intents fallits d'ingressar en molt poc temps."
-BLOCK_DURATION_LABEL="Durada del bloqueig"
-BLOCK_DURATION_DESC="Determina el temps que es bloqueja l'adreça IP abans de que se li permeti accedir al lloc de nou"
-NOTIFY_REMAINING_ATTEMPTS_LABEL="Intents restants"
-NOTIFY_REMAINING_ATTEMPTS_DESC="Activa o desactiva les notificacions sobre els intents restants. Si està habilitat, l'usuari, després de cada intent fallit d'inici de sessió, veurà un missatge en el formulari d'accés de quants intents d'inici de sessió encara estan disponibles abans que es bloquegi l'adreça IP. Aquest ajust només s'activa si s'ha habilitat el bloqueig (si el bloqueig està desactivat, les entrades 'restants' no tindrien sentit)."
-NOTIFY_BLOCKED_USER_LABEL="Missatge a l'usuari bloquejat"
-NOTIFY_BLOCKED_USER_DESC="Quan s'activa, en cas d'una adreça IP bloquejada, la notificació s'enviarà a l'usuari que va intentar connectar-se (només per descomptat, en cas que sigui un nom d'usuari existent)."
-USE_HTTP_ERROR_LABEL="Utilitza error HTTP"
-USE_HTTP_ERROR_DESC="Si està activat, bfstop enviarà un codi d'estat 403 (prohibit) si l'adreça IP dels usuaris està bloquejada"
-ENABLED="Activat"
-DISABLED="Desactivat"
-NOTIFY_UNLIMITED="Il·limitat"
-NOTIFY_NEVER="Mai"
-BLOCK_UNLIMITED="Il·limitat"
-BLOCK_5MINUTES="5 minuts"
-BLOCK_10MINUTES="10 minuts"
-BLOCK_15MINUTES="15 minuts"
-BLOCK_30MINUTES="30 minuts"
-BLOCK_1HOUR="1 hora"
-BLOCK_2HOURS="2 hores"
-BLOCK_4HOURS="4 hores"
-BLOCK_8HOURS="8 hores"
-BLOCK_24HOURS="1 dia"
-BLOCK_1WEEK="1 setmana"
-BLOCK_30DAYS="30 dies"
-MAX_BLOCKS_BEFORE_LABEL="Permanent després de"
-MAX_BLOCKS_BEFORE_DESC="Determina després de quants intents bloquejats s'establirà un bloqueig permanent. El bloquejos que van ser retirats (o sigui desbloquejats) per token també compten. Només aquells realitzats a través de la part administrativa seran ignorats."
-MAX_BLOCK_NEVER="Mai"
-ENABLED_FOR_ORIGIN_LABEL="Activa per a"
-ENABLED_FOR_ORIGIN_DESC="Determina a quines parts del sistema de Joomla! han de ser actius. Si es posa que només sigui frontal o administració, no es considerarà l'altre part, per cap funcionalitat (per exemple, si està configurat només per l'administració, els intents fallits d'inici de sessió al frontal no es registraran i les connexions reeixides al frontal no reiniciaran el comptador d'inicis de sessió fallida). Si us plau, tingues en compte que un bloqueig sempre afecta tot el lloc, no importa el que s'introdueix aquí!."
-ENABLED_FOR_FRONTEND="Només Frontal"
-ENABLED_FOR_BACKEND="Només Administració"
-ENABLED_FOR_BOTH="Frontal i Administració"
-FATAL="Error fatal"
-INFO="Misstage informatiu"
-DEBUG="Informació detallada"
-DELETE_OLD_ENTRIES_LABEL="Suprimeix les entrades antigues"
-DELETE_OLD_ENTRIES_DESC="Elimina les entrades més antigues que el nombre de setmanes que figuren en aquest camp (estableix a 0 per desactivar la supressió de les entrades antigues)."
-ADAPTIVE_DELAY_LABEL="Retard adaptatiu"
-ADAPTIVE_DELAY_DESC="Adapta el retard a la taxa actual de retards que han fallat. Augmentarà el retard cada vegada que hi ha un major nombre d'inicis de sessió com una contramesura per als atacs distribuïts."
-ADAPTIVE_DELAY_MAX_LABEL="Retard màxim"
-ADAPTIVE_DELAY_MAX_DESC="El termini màxim per a la resposta als intents de connexió fallits quan el retard adaptatiu s'activa"
-ADAPTIVE_DELAY_THRSH_MIN_LABEL="Nivell mínim"
-ADAPTIVE_DELAY_THRSH_MIN_DESC="El nivell en què el retard adaptatiu comença a fer efecte (mesurat en nombre d'inicis de sessió fallits en la darrera hora)"
-ADAPTIVE_DELAY_THRSH_MAX_LABEL="Nivell màxim"
-ADAPTIVE_DELAY_THRSH_MAX_DESC="El nivell en què el retard adaptatiu arriba al retard màxim (mesurat en nombre d'inicis de sessió fallits en la darrera hora)"
-DELAY_FIELDSET_LABEL="Retard"
-NOTIFICATION_FIELDSET_LABEL="Notificació"
-GROUP_NOTIFICATION_ENABLED_LABEL="Grup d'usuaris per a la notificació"
-GROUP_NOTIFICATION_ENABLED_DESC="Si està activat, el grup d'usuaris seleccionats a continuació seran notificats en cas d'inicis de sessió fallits o IP prohibides"
-USERGROUP_LABEL="Grup d'usuaris"
-USERGROUP_DESC="Tria un grup d'usuaris per a notificar-los sobre els inicis de sessió fallits i IP prohibides (si està activat anteriorment). Probablement hauràs de crear un grup dedicat per això, o usar un grup amb administradors experimentats, com el grup per defecte 'Superusuaris'".
-NOTIFY_USE_PASSWORD_REMINDER_LABEL="Recordatori per al restabliment de la clau "
-NOTIFY_USE_PASSWORD_REMINDER_DESC="Si s'ha de mostrar, i quan, un recordatori sobre l'ús de la funcionalitat de recuperació de la contrasenya en un inici de sessió fallit"
-REMINDER_NOTIFY_ALWAYS="Sempre"
-REMINDER_NOTIFY_1LEFT="Quan resti 1 intent"
-REMINDER_NOTIFY_2LEFT="Quan restin 2 intents"
-BLOCKED_MSG_SHOWIP_LABEL="Mostra IP"
-BLOCKED_MSG_SHOWIP_DESC="Un cop bloquejat, mostrar a l'usuari la seva adreça IP (segons la percepció del servidor)"
+PLG_SYSTEM_BFSTOP_DESC="<h2>Brute Force Stop</ h2><div> Aquest connector proporciona els mitjans per evitar els atacs per força bruta a la teva instal·lació Joomla!. Per això, el connector emmagatzema informació sobre els intents fallits de connexió, de manera que en arribar a un nombre configurable d'intents fallits d'inici de sessió l'adreça IP de l'atacant pot ser bloquejada. A més, pot configurar notificacions sobre intents fallits i les adreces IP bloquejades, així com un retard variable després d'un inici de sessió fallit.</div><br /><div><em>No oblidis de configurar i publicar el connector després de la instal·lació!</em><br />Si tens qualsevol pregunta sobre el connector, visita <a href='https://github.com/codeling/bfstop'>El lloc del projecte a github</a>. Si hi ha algun problema en utilitzar el connector, no dubtis a reportar al <a href='https://github.com/codeling/bfstop/issues'>Seguiment d'incidències.</a></div><br/><div>En algunes parts, aquest connector s'inspira en els següents plugins Login Failed Log, Redirect Failed Logins and Ban IP Address/Range. Moltes gràcies als autors d'aquests connectors!.<br /> Brute Force Stop és un connector <a target='_blank' href='http://www.joomla.org/'>Joomla!,</a> publicat sota la <a target='_blank' title='GNU General Public License' href='http://www.gnu.org/copyleft/gpl.html'>GNU General Public License.</a></div>"
+PLG_SYSTEM_BFSTOP_BLOCK_ENABLED_LABEL="Activar bloqueig"
+PLG_SYSTEM_BFSTOP_BLOCK_ENABLED_DESC="Si aquest connector ha de bloquejar les adreces IP. Quan està desactivat, no s'afegiran noves adreces IP a la llista d'adreces bloquejades, i ni tan sols les adreces IP que ja estan en aquesta llista seran bloquejades més (encara que la llista en si es mantindrà)".
+PLG_SYSTEM_BFSTOP_USERID_LABEL="Selecciona un usuari"
+PLG_SYSTEM_BFSTOP_USERID_DESC="Selecciona l'usuari que desitja tenir notificacions d'enviament."
+PLG_SYSTEM_BFSTOP_EMAIL_ADDRESS_LABEL="Adreça de correu electrònic"
+PLG_SYSTEM_BFSTOP_EMAIL_ADDRESS_DESC="Introdueix l'adreça de correu electrònic on vols tenir notificacions d'enviament."
+PLG_SYSTEM_BFSTOP_NOTIFY_FAILED_NUMBER_LABEL="Missatges d'inici de sessió fallits per dia"
+PLG_SYSTEM_BFSTOP_NOTIFY_FAILED_NUMBER_DESC="Amb quina freqüència es notificaran inicis de sessió fallits en un dia"
+PLG_SYSTEM_BFSTOP_NOTIFY_BLOCKED_NUMBER_LABEL="Missatges de bloqueig per dia"
+PLG_SYSTEM_BFSTOP_NOTIFY_BLOCKED_NUMBER_DESC="Amb quina freqüència es notificaran les IP bloquejades en un dia"
+PLG_SYSTEM_BFSTOP_DELAY_DURATION_LABEL="Retard"
+PLG_SYSTEM_BFSTOP_DELAY_DURATION_DESC="Retard (en segons) en un intent d'accés fallit"
+PLG_SYSTEM_BFSTOP_LOGLEVEL_LABEL="Iniciant sessió"
+PLG_SYSTEM_BFSTOP_LOGLEVEL_DESC="Determina si un informe sobre les activitats del connector ha de ser creat (això tan sols serà necessari en cas d'un problema, el fitxer de registre es pot trobar al directori de registres amb el nom plg_system_bfstop.log.php)"
+PLG_SYSTEM_BFSTOP_BLOCK_NUMBER_LABEL="Límit abans de bloquejar"
+PLG_SYSTEM_BFSTOP_BLOCK_NUMBER_DESC="Quantes vegades un usuari pot equivocar-se abans de que es bloquegi la IP"
+PLG_SYSTEM_BFSTOP_BLOCKED_MESSAGE_LABEL="Missatge de bloqueig"
+PLG_SYSTEM_BFSTOP_BLOCKED_MESSAGE_DESC="El missatge que voleu que aparegui a la finestra del navegador d'un usuari la direcció IP del qual ha estat bloquejada a causa de massa intents de connexió fallits. Si es deixa buida, es mostrarà aquest missatge per defecte: La seva adreça IP ha estat bloquejada a causa de haver massa intents fallits d'ingressar en molt poc temps."
+PLG_SYSTEM_BFSTOP_BLOCK_DURATION_LABEL="Durada del bloqueig"
+PLG_SYSTEM_BFSTOP_BLOCK_DURATION_DESC="Determina el temps que es bloqueja l'adreça IP abans de que se li permeti accedir al lloc de nou"
+PLG_SYSTEM_BFSTOP_NOTIFY_REMAINING_ATTEMPTS_LABEL="Intents restants"
+PLG_SYSTEM_BFSTOP_NOTIFY_REMAINING_ATTEMPTS_DESC="Activa o desactiva les notificacions sobre els intents restants. Si està habilitat, l'usuari, després de cada intent fallit d'inici de sessió, veurà un missatge en el formulari d'accés de quants intents d'inici de sessió encara estan disponibles abans que es bloquegi l'adreça IP. Aquest ajust només s'activa si s'ha habilitat el bloqueig (si el bloqueig està desactivat, les entrades 'restants' no tindrien sentit)."
+PLG_SYSTEM_BFSTOP_NOTIFY_BLOCKED_USER_LABEL="Missatge a l'usuari bloquejat"
+PLG_SYSTEM_BFSTOP_NOTIFY_BLOCKED_USER_DESC="Quan s'activa, en cas d'una adreça IP bloquejada, la notificació s'enviarà a l'usuari que va intentar connectar-se (només per descomptat, en cas que sigui un nom d'usuari existent)."
+PLG_SYSTEM_BFSTOP_USE_HTTP_ERROR_LABEL="Utilitza error HTTP"
+PLG_SYSTEM_BFSTOP_USE_HTTP_ERROR_DESC="Si està activat, bfstop enviarà un codi d'estat 403 (prohibit) si l'adreça IP dels usuaris està bloquejada"
+PLG_SYSTEM_BFSTOP_ENABLED="Activat"
+PLG_SYSTEM_BFSTOP_DISABLED="Desactivat"
+PLG_SYSTEM_BFSTOP_NOTIFY_UNLIMITED="Il·limitat"
+PLG_SYSTEM_BFSTOP_NOTIFY_NEVER="Mai"
+PLG_SYSTEM_BFSTOP_BLOCK_UNLIMITED="Il·limitat"
+PLG_SYSTEM_BFSTOP_BLOCK_5MINUTES="5 minuts"
+PLG_SYSTEM_BFSTOP_BLOCK_10MINUTES="10 minuts"
+PLG_SYSTEM_BFSTOP_BLOCK_15MINUTES="15 minuts"
+PLG_SYSTEM_BFSTOP_BLOCK_30MINUTES="30 minuts"
+PLG_SYSTEM_BFSTOP_BLOCK_1HOUR="1 hora"
+PLG_SYSTEM_BFSTOP_BLOCK_2HOURS="2 hores"
+PLG_SYSTEM_BFSTOP_BLOCK_4HOURS="4 hores"
+PLG_SYSTEM_BFSTOP_BLOCK_8HOURS="8 hores"
+PLG_SYSTEM_BFSTOP_BLOCK_24HOURS="1 dia"
+PLG_SYSTEM_BFSTOP_BLOCK_1WEEK="1 setmana"
+PLG_SYSTEM_BFSTOP_BLOCK_30DAYS="30 dies"
+PLG_SYSTEM_BFSTOP_MAX_BLOCKS_BEFORE_LABEL="Permanent després de"
+PLG_SYSTEM_BFSTOP_MAX_BLOCKS_BEFORE_DESC="Determina després de quants intents bloquejats s'establirà un bloqueig permanent. El bloquejos que van ser retirats (o sigui desbloquejats) per token també compten. Només aquells realitzats a través de la part administrativa seran ignorats."
+PLG_SYSTEM_BFSTOP_MAX_BLOCK_NEVER="Mai"
+PLG_SYSTEM_BFSTOP_ENABLED_FOR_ORIGIN_LABEL="Activa per a"
+PLG_SYSTEM_BFSTOP_ENABLED_FOR_ORIGIN_DESC="Determina a quines parts del sistema de Joomla! han de ser actius. Si es posa que només sigui frontal o administració, no es considerarà l'altre part, per cap funcionalitat (per exemple, si està configurat només per l'administració, els intents fallits d'inici de sessió al frontal no es registraran i les connexions reeixides al frontal no reiniciaran el comptador d'inicis de sessió fallida). Si us plau, tingues en compte que un bloqueig sempre afecta tot el lloc, no importa el que s'introdueix aquí!."
+PLG_SYSTEM_BFSTOP_ENABLED_FOR_FRONTEND="Només Frontal"
+PLG_SYSTEM_BFSTOP_ENABLED_FOR_BACKEND="Només Administració"
+PLG_SYSTEM_BFSTOP_ENABLED_FOR_BOTH="Frontal i Administració"
+PLG_SYSTEM_BFSTOP_FATAL="Error fatal"
+PLG_SYSTEM_BFSTOP_INFO="Misstage informatiu"
+PLG_SYSTEM_BFSTOP_DEBUG="Informació detallada"
+PLG_SYSTEM_BFSTOP_DELETE_OLD_ENTRIES_LABEL="Suprimeix les entrades antigues"
+PLG_SYSTEM_BFSTOP_DELETE_OLD_ENTRIES_DESC="Elimina les entrades més antigues que el nombre de setmanes que figuren en aquest camp (estableix a 0 per desactivar la supressió de les entrades antigues)."
+PLG_SYSTEM_BFSTOP_ADAPTIVE_DELAY_LABEL="Retard adaptatiu"
+PLG_SYSTEM_BFSTOP_ADAPTIVE_DELAY_DESC="Adapta el retard a la taxa actual de retards que han fallat. Augmentarà el retard cada vegada que hi ha un major nombre d'inicis de sessió com una contramesura per als atacs distribuïts."
+PLG_SYSTEM_BFSTOP_ADAPTIVE_DELAY_MAX_LABEL="Retard màxim"
+PLG_SYSTEM_BFSTOP_ADAPTIVE_DELAY_MAX_DESC="El termini màxim per a la resposta als intents de connexió fallits quan el retard adaptatiu s'activa"
+PLG_SYSTEM_BFSTOP_ADAPTIVE_DELAY_THRSH_MIN_LABEL="Nivell mínim"
+PLG_SYSTEM_BFSTOP_ADAPTIVE_DELAY_THRSH_MIN_DESC="El nivell en què el retard adaptatiu comença a fer efecte (mesurat en nombre d'inicis de sessió fallits en la darrera hora)"
+PLG_SYSTEM_BFSTOP_ADAPTIVE_DELAY_THRSH_MAX_LABEL="Nivell màxim"
+PLG_SYSTEM_BFSTOP_ADAPTIVE_DELAY_THRSH_MAX_DESC="El nivell en què el retard adaptatiu arriba al retard màxim (mesurat en nombre d'inicis de sessió fallits en la darrera hora)"
+PLG_SYSTEM_BFSTOP_DELAY_FIELDSET_LABEL="Retard"
+PLG_SYSTEM_BFSTOP_NOTIFICATION_FIELDSET_LABEL="Notificació"
+PLG_SYSTEM_BFSTOP_GROUP_NOTIFICATION_ENABLED_LABEL="Grup d'usuaris per a la notificació"
+PLG_SYSTEM_BFSTOP_GROUP_NOTIFICATION_ENABLED_DESC="Si està activat, el grup d'usuaris seleccionats a continuació seran notificats en cas d'inicis de sessió fallits o IP prohibides"
+PLG_SYSTEM_BFSTOP_USERGROUP_LABEL="Grup d'usuaris"
+PLG_SYSTEM_BFSTOP_USERGROUP_DESC="Tria un grup d'usuaris per a notificar-los sobre els inicis de sessió fallits i IP prohibides (si està activat anteriorment). Probablement hauràs de crear un grup dedicat per això, o usar un grup amb administradors experimentats, com el grup per defecte 'Superusuaris'".
+PLG_SYSTEM_BFSTOP_NOTIFY_USE_PASSWORD_REMINDER_LABEL="Recordatori per al restabliment de la clau "
+PLG_SYSTEM_BFSTOP_NOTIFY_USE_PASSWORD_REMINDER_DESC="Si s'ha de mostrar, i quan, un recordatori sobre l'ús de la funcionalitat de recuperació de la contrasenya en un inici de sessió fallit"
+PLG_SYSTEM_BFSTOP_REMINDER_NOTIFY_ALWAYS="Sempre"
+PLG_SYSTEM_BFSTOP_REMINDER_NOTIFY_1LEFT="Quan resti 1 intent"
+PLG_SYSTEM_BFSTOP_REMINDER_NOTIFY_2LEFT="Quan restin 2 intents"
+PLG_SYSTEM_BFSTOP_BLOCKED_MSG_SHOWIP_LABEL="Mostra IP"
+PLG_SYSTEM_BFSTOP_BLOCKED_MSG_SHOWIP_DESC="Un cop bloquejat, mostrar a l'usuari la seva adreça IP (segons la percepció del servidor)"
