--- a/language/de-DE/de-DE.plg_system_bfstop.ini
+++ b/language/de-DE/de-DE.plg_system_bfstop.ini
@@ -1,14 +1,14 @@
-FAILED_LOGIN_ATTEMPT="%s: Fehlgeschlagener Login-Versuch auf %s"
-USERNAME="Benutzername"
-IPADDRESS="IP-Adresse"
-ERROR="Fehler"
-DATETIME="Zeitpunkt"
-ORIGIN="Quelle"
-BLOCKED_IP_ADDRESS_BODY="Die IP Adresse %1$s wurde aufgrund zu vieler fehlgeschlagener Login-Versuche auf %2$s gesperrt! Login-Versuche, die von dieser IP-Adresse aufgezeichnet wurden:\n\n%3$s\n\nHinweis: Es könnten mehr Versuche angeführt sein als die, die zur Blockierung beitrugen, wenn es frühere Versuche gab, die z.B. bereits früher eine Blockade ausgelöst haben, oder zu weit auseinander lagen um eine Blockierung zu verursachen!"
-BLOCKED_IP_ADDRESS_SUBJECT="%s: IP-Adresse %s gesperrt"
-BLOCKED_IP_MESSAGE="Deine IP-Addresse wurde aufgrund zu vieler fehlgeschlagener Login-Versuche gesperrt."
-X_ATTEMPTS_LEFT="Du hast noch %d Versuch(e) bevor deine IP-Adresse blockiert wird!"
-BLOCKED_SUBJECT="%s: Fehlgeschlagene Login-Versuche"
-BLOCKED_BODY="Hallo!\n\nJemand hat versucht, sich mit deinem Benutzernamen auf der Webseite '%s' einzuloggen, dafür aber ein falsches Passwort angegeben.\nDies ist so oft passiert dass die IP-Adresse von der diese Versuche ausgingen, gesperrt wurde, um Missbrauch vorzubeugen.\n\nFür den Fall dass Du das nicht selbst warst, ignoriere bitte diese Mail. Du solltest Dich weiterhin wie gewohnt einloggen können.\nSolltest du jedoch selbst für diese Versuche verantwortlich sein, und du weißt nun das Passwort wieder (du kannst alternativ auch die 'Passwort zurücksetzen'-Funktion benützen), dann kannst Du die Sperre wieder aufheben indem du auf den folgenden Link klickst:\n%s\n\nFreundliche Grüße von der automatischen Webseiten-Verwaltung!\n\nHinweis: Dies ist eine automatisiert versendete Nachricht."
-PASSWORD_RESET_RECOMMENDED="Es wurde bemerkt, dass einer oder mehrere deiner Login-Versuche fehlgeschlagen sind. Bei erneuten Versuchen wirst du in Kürze gesperrt. Es wird daher empfohlen, die <a href="%1$s">Funktionalität zum Zurücksetzen des Passworts</a> zu benützen!"
-BLOCKED_CLIENT_IP="Deine IP-Adresse ist: %s."
+PLG_SYSTEM_BFSTOP_FAILED_LOGIN_ATTEMPT="%s: Fehlgeschlagener Login-Versuch auf %s"
+PLG_SYSTEM_BFSTOP_USERNAME="Benutzername"
+PLG_SYSTEM_BFSTOP_IPADDRESS="IP-Adresse"
+PLG_SYSTEM_BFSTOP_ERROR="Fehler"
+PLG_SYSTEM_BFSTOP_DATETIME="Zeitpunkt"
+PLG_SYSTEM_BFSTOP_ORIGIN="Quelle"
+PLG_SYSTEM_BFSTOP_BLOCKED_IP_ADDRESS_BODY="Die IP Adresse %1$s wurde aufgrund zu vieler fehlgeschlagener Login-Versuche auf %2$s gesperrt! Login-Versuche, die von dieser IP-Adresse aufgezeichnet wurden:\n\n%3$s\n\nHinweis: Es könnten mehr Versuche angeführt sein als die, die zur Blockierung beitrugen, wenn es frühere Versuche gab, die z.B. bereits früher eine Blockade ausgelöst haben, oder zu weit auseinander lagen um eine Blockierung zu verursachen!"
+PLG_SYSTEM_BFSTOP_BLOCKED_IP_ADDRESS_SUBJECT="%s: IP-Adresse %s gesperrt"
+PLG_SYSTEM_BFSTOP_BLOCKED_IP_MESSAGE="Deine IP-Addresse wurde aufgrund zu vieler fehlgeschlagener Login-Versuche gesperrt."
+PLG_SYSTEM_BFSTOP_X_ATTEMPTS_LEFT="Du hast noch %d Versuch(e) bevor deine IP-Adresse blockiert wird!"
+PLG_SYSTEM_BFSTOP_BLOCKED_SUBJECT="%s: Fehlgeschlagene Login-Versuche"
+PLG_SYSTEM_BFSTOP_BLOCKED_BODY="Hallo!\n\nJemand hat versucht, sich mit deinem Benutzernamen auf der Webseite '%s' einzuloggen, dafür aber ein falsches Passwort angegeben.\nDies ist so oft passiert dass die IP-Adresse von der diese Versuche ausgingen, gesperrt wurde, um Missbrauch vorzubeugen.\n\nFür den Fall dass Du das nicht selbst warst, ignoriere bitte diese Mail. Du solltest Dich weiterhin wie gewohnt einloggen können.\nSolltest du jedoch selbst für diese Versuche verantwortlich sein, und du weißt nun das Passwort wieder (du kannst alternativ auch die 'Passwort zurücksetzen'-Funktion benützen), dann kannst Du die Sperre wieder aufheben indem du auf den folgenden Link klickst:\n%s\n\nFreundliche Grüße von der automatischen Webseiten-Verwaltung!\n\nHinweis: Dies ist eine automatisiert versendete Nachricht."
+PLG_SYSTEM_BFSTOP_PASSWORD_RESET_RECOMMENDED="Es wurde bemerkt, dass einer oder mehrere deiner Login-Versuche fehlgeschlagen sind. Bei erneuten Versuchen wirst du in Kürze gesperrt. Es wird daher empfohlen, die <a href="%1$s">Funktionalität zum Zurücksetzen des Passworts</a> zu benützen!"
+PLG_SYSTEM_BFSTOP_BLOCKED_CLIENT_IP="Deine IP-Adresse ist: %s."
