--- a/language/de-DE/de-DE.plg_system_bfstop.sys.ini
+++ b/language/de-DE/de-DE.plg_system_bfstop.sys.ini
@@ -1,78 +1,78 @@
 PLG_SYSTEM_BFSTOP="System - Brute Force Stop"
-PLG_BFSTOP_DESC="<h2>Brute Force Stop</h2><div>Dieses Plugin dient der Abwehr von Brute-Force-Attacken auf Ihre Joomla-Installation. Zu diesem Zweck wird ein Log über fehlgeschlagene Login-Versuche in Ihrem Front- und Backend erstellt, und bei Erreichen einer konfigurierbaren Anzahl solcher fehlgeschlagener Versuche wird die IP-Adresse, von der diese Versuche kommen, gesperrt. Weiters lassen sich Benachrichtigungen über fehlgeschlagene Login-Versuche sowie über geblockte IP-Adressen konfigurieren. Weiters kann man vor der Antwort auf fehlgeschlagene Login-Versuche eine einstellbare Verzögerung konfigurieren.</div><br /><div><em>Nicht vergessen, das Plugin nach der Installation zu konfigurieren und freizugeben!</em><br />Bei Fragen zum Plugin besuchen Sie bitte die <a href='https://github.com/codeling/bfstop'>Projektseite auf github</a>. Sollten bei der Verwendung Probleme auftreten, zögern Sie nicht, diese im <a href='https://github.com/codeling/bfstop/issues'>issue tracker</a> zu melden!</div><br /><div>Teilweise wurde die Funktionalität durch die folgenden Plugins inspiriert: Login Failed Log, Redirect Failed Logins and Ban IP Address/Range. Mein Dank geht an die Autoren dieser Plugins!<br /><em>Brute Force Stop</em> ist ein <a target='_blank' href='http://www.joomla.org/'>Joomla!</a> Plugin, veröffentlicht unter der <a target='_blank' title='GNU General Public License' href='http://www.gnu.org/copyleft/gpl.html'>GNU General Public License</a>.</div>"
-BLOCK_ENABLED_LABEL="Blockierung"
-BLOCK_ENABLED_DESC="Bestimmt ob das Plugin IP-Adressen blockieren soll. Wenn deaktiviert, werden keine neuen Sperren mehr angelegt, und auch bereits eingetragene Sperren ignoriert (obgleich diese erhalten bleiben)."
-USERID_LABEL="Benutzer wählen"
-USERID_DESC="Den Benutzer auswählen, an dessen Email-Adresse die Benachrichtigungen gesendet werden sollen."
-EMAIL_ADDRESS_LABEL="Email-Adresse(n)"
-EMAIL_ADDRESS_DESC="Die Email-Adresse(n) eingeben, an die die Benachrichtigungen gesendet werden sollen. Wenn mehrere Adressen eingegeben werden, müssen diese durch einen Strichpunkt (;) getrennt werden."
-NOTIFY_FAILED_NUMBER_LABEL="Fehlgeschlagen-Nachrichten"
-NOTIFY_FAILED_NUMBER_DESC="Wie oft an einem Tag maximal eine Benachrichtigung über fehlgeschlagene Login-Versuche gesendet werden soll."
-NOTIFY_BLOCKED_NUMBER_LABEL="Blockiert-Nachrichten"
-NOTIFY_BLOCKED_NUMBER_DESC="Wie oft an einem Tag maximal eine Benachrichtigung über blockierte IP-Adressen gesendet werden soll."
-DELAY_DURATION_LABEL="Verzögerung"
-DELAY_DURATION_DESC="Verzögerung (in Sekunden) bei einem fehlgeschlagenen Login-Versuch"
-LOGLEVEL_LABEL="Logging"
-LOGLEVEL_DESC="Bestimmt ob eine Logdatei über die Aktivitäten des Plugins angelegt werden soll (dies sollte nur im Fehlerfall notwendig sein; die Logdatei findet sich im logs-Verzeichnis unter dem Namen plg_system_bfstop.log.php); weiters bestimmt diese Einstellung, wie viel Informationen im Logfile festgehalten werden; je weiter unten in der Liste, desto detailliertere Informationen wird das Logfile enthalten. Ein guter Standard-Wert ist wahrscheinlich 'Warnung' - hier werden alle Warnungen, Fehler und fatalen Fehler im Logfile festgehalten."
-BLOCK_NUMBER_LABEL="Sperrschwelle"
-BLOCK_NUMBER_DESC="Wie oft ein Login von derselben IP-Adresse aus versucht werden kann bevor diese IP-Adresse gesperrt wird."
-BLOCKED_MESSAGE_LABEL="Sperrnachricht"
-BLOCKED_MESSAGE_DESC="Die Nachricht, die dem Benutzer im Browserfenster angezeigt werden soll, wenn dieser nach zu vielen gescheiterten Login-Versuchen gesperrt wurde (wenn leergelassen, wird eine Standard-Nachricht angezeigt: 'Deine IP-Addresse wurde aufgrund zu vieler fehlgeschlagener Login-Versuche gesperrt.')."
-BLOCK_DURATION_LABEL="Sperrdauer"
-BLOCK_DURATION_DESC="Bestimmt wie lange die IP-Sperre aufrecht erhalten werden soll bevor der Zugriff auf die Website wieder erlaubt wird"
-NOTIFY_REMAINING_ATTEMPTS_LABEL="Übrige Versuche"
-NOTIFY_REMAINING_ATTEMPTS_DESC="Schaltet die Benachrichtigung über verbleibende Versuche ein; wenn aktiviert, wird im Login-Formular nach einem fehlgeschlagenen Login-Versuch eine Nachricht mit den verbleibenden Login-Versuchen angezeigt. Diese Einstellung wird nur dann berücksichtigt, wenn Sperren eingeschaltet ist (wenn es nicht eingeschaltet ist, gibt es ja auch keine 'verbleibenden' Versuche)"
-NOTIFY_BLOCKED_USER_LABEL="Benutzer-Block-Nachricht"
-NOTIFY_BLOCKED_USER_DESC="Wenn eingeschaltet, wird an die in der Datenbank hinterlegte Email-Adresse eine Nachricht hinterlegt, wenn eine IP-Adresse gesperrt wird (sofern der Benutzername, mit dem das Login versucht wurde, ein existierender war)"
-USE_HTTP_ERROR_LABEL="Verwende HTTP-Fehler"
-USE_HTTP_ERROR_DESC="Wenn aktiviert, wird der HTTP Statuscode 403 (Forbidden) gesendet wenn die IP-Addresse eines Benutzers gesperrt ist."
-ENABLED="aktiviert"
-DISABLED="deaktiviert"
-NOTIFY_UNLIMITED="unbegrenzt"
-NOTIFY_NEVER="niemals"
-BLOCK_UNLIMITED="unbegrenzt"
-BLOCK_5MINUTES="5 Minuten"
-BLOCK_10MINUTES="10 Minuten"
-BLOCK_15MINUTES="15 Minuten"
-BLOCK_30MINUTES="30 Minuten"
-BLOCK_1HOUR="1 Stunde"
-BLOCK_2HOURS="2 Stunden"
-BLOCK_4HOURS="4 Stunden"
-BLOCK_8HOURS="8 Stunden"
-BLOCK_24HOURS="1 Tag"
-BLOCK_1WEEK="1 Woche"
-BLOCK_30DAYS="30 Tage"
-MAX_BLOCKS_BEFORE_LABEL="Permanent nach"
-MAX_BLOCKS_BEFORE_DESC="Bestimmt nach wie vielen Sperren eine permanente Sperre einer IP-Adresse eingerichtet wird. Zur Bestimmung der Anzahl vorheriger Sperren werden auch solche wiederaufgehobenen Sperren hinzugezählt, die der Benutzer selbst wiederaufgehoben hat; nur per Backend aufgehobene Sperren werden ignoriert"
-MAX_BLOCK_NEVER="Niemals"
-ENABLED_FOR_ORIGIN_LABEL="Aktiv für"
-ENABLED_FOR_ORIGIN_DESC="Bestimmt für welche Teile des Joomla!-Systems das Plugin aktiv ist. Wenn nur für entweder Frontend oder Backend aktiviert, dann wird vom anderen Teil keinerlei Aktion für irgendeine Funktionalität berücksichtigt (wenn zum Beispiel hier 'Nur Backend' eingestellt ist, dann wird nicht nur kein Log über fehlgeschlagene Logins im Frontend geführt, sondern auch erfolgreiche Logins im Frontend werden nicht zu einer Zurücksetzung des Zählers der fehlgeschlagenen Logins für das Backend verwendet). Wichtig: Eine Sperre betrifft immer die gesamte Seite, egal was hier eingestellt ist."
-ENABLED_FOR_FRONTEND="Nur Frontend"
-ENABLED_FOR_BACKEND="Nur Backend"
-ENABLED_FOR_BOTH="Frontend und Backend"
-FATAL="Fatale Fehler"
-INFO="Zusätzliche Information"
-DEBUG="Detailliertes Log"
-DELETE_OLD_ENTRIES_LABEL="Löschen alter Einträge"
-DELETE_OLD_ENTRIES_DESC="Lösche Einträge älter als die in diesem Feld eingegebene Anzahl an Wochen (auf 0 setzen um keine alten Einträge zu löschen)."
-ADAPTIVE_DELAY_LABEL="Adaptives Delay"
-ADAPTIVE_DELAY_DESC="Aktivieren um die Verzögerung bei fehlgeschlagenen Login-Versuchen automatisch an die derzeitige Anzahl an fehlgeschlagenen Logins anzupassen. Wird die Verzögerung angepasst erhöhen wann immer eine erhöhte Anzahl an fehlgeschlagenen Login-Versuchen festgestellt wird, als Gegenmaßnahme gegen verteilte Attacken."
-ADAPTIVE_DELAY_MAX_LABEL="Maximal-Verzögerung"
-ADAPTIVE_DELAY_MAX_DESC="Die maximale Verzögerung der Antwort bei fehlgeschlagenen Nachrichten wenn die adaptive Verzögerung aktiviert ist."
-ADAPTIVE_DELAY_THRSH_MIN_LABEL="Untere Schwelle"
-ADAPTIVE_DELAY_THRSH_MIN_DESC="Die untere Schwelle ab der die adaptive Verzögerung aktiv wird (gemessen in fehlgeschlagenen Logins in der letzten Stunde)"
-ADAPTIVE_DELAY_THRSH_MAX_LABEL="Obere Schwelle"
-ADAPTIVE_DELAY_THRSH_MAX_DESC="Die Schwelle ab der die adaptive Verzögerung die maximale Verzögerung erreichen soll (gemessen in fehlgeschlagenen Logins in der letzten Stunde)"
-DELAY_FIELDSET_LABEL="Verzögerung"
-NOTIFICATION_FIELDSET_LABEL="Benachrichtigung"
-GROUP_NOTIFICATION_ENABLED_LABEL="Benutzergruppen-Nachricht"
-GROUP_NOTIFICATION_ENABLED_DESC="Wenn aktiviert, werden Benachrichtigungen an alle Benutzer gesendet, die Mitglied der unten ausgewählten Gruppe sind."
-USERGROUP_LABEL="Benutzergruppe"
-USERGROUP_DESC="Diejenige Benutzergruppe, an deren Mitglieder Benachrichtigungen über fehlgeschlagene Logins und geblockte IPs gesendet werden (falls oben aktiviert). Gewöhnlich sollte hierfür eine dedizierte Gruppe geschaffen werden, oder eine Gruppe die nur die erfahrensten Administratoren enthält, etwa die 'Super User' Gruppe."
-NOTIFY_USE_PASSWORD_REMINDER_LABEL="Passwort Reset Nachricht"
-NOTIFY_USE_PASSWORD_REMINDER_DESC="Ob und wann bei fehlgeschlagenen Logins eine Benachrichtigung darüber angezeigt werden soll, die Funktionalität zum Zurücksetzen des Passworts zu benutzen."
-REMINDER_NOTIFY_ALWAYS="Immer anzeigen"
-REMINDER_NOTIFY_1LEFT="Wenn 1 Versuch übrig"
-REMINDER_NOTIFY_2LEFT="Wenn 2 Versuche übrig"
-BLOCKED_MSG_SHOWIP_LABEL="IP zeigen"
-BLOCKED_MSG_SHOWIP_DESC="Zeige die IP Adresse des Benutzers (wie vom Server wahrgenommen) wenn blockiert"
+PLG_SYSTEM_BFSTOP_DESC="<h2>Brute Force Stop</h2><div>Dieses Plugin dient der Abwehr von Brute-Force-Attacken auf Ihre Joomla-Installation. Zu diesem Zweck wird ein Log über fehlgeschlagene Login-Versuche in Ihrem Front- und Backend erstellt, und bei Erreichen einer konfigurierbaren Anzahl solcher fehlgeschlagener Versuche wird die IP-Adresse, von der diese Versuche kommen, gesperrt. Weiters lassen sich Benachrichtigungen über fehlgeschlagene Login-Versuche sowie über geblockte IP-Adressen konfigurieren. Weiters kann man vor der Antwort auf fehlgeschlagene Login-Versuche eine einstellbare Verzögerung konfigurieren.</div><br /><div><em>Nicht vergessen, das Plugin nach der Installation zu konfigurieren und freizugeben!</em><br />Bei Fragen zum Plugin besuchen Sie bitte die <a href='https://github.com/codeling/bfstop'>Projektseite auf github</a>. Sollten bei der Verwendung Probleme auftreten, zögern Sie nicht, diese im <a href='https://github.com/codeling/bfstop/issues'>issue tracker</a> zu melden!</div><br /><div>Teilweise wurde die Funktionalität durch die folgenden Plugins inspiriert: Login Failed Log, Redirect Failed Logins and Ban IP Address/Range. Mein Dank geht an die Autoren dieser Plugins!<br /><em>Brute Force Stop</em> ist ein <a target='_blank' href='http://www.joomla.org/'>Joomla!</a> Plugin, veröffentlicht unter der <a target='_blank' title='GNU General Public License' href='http://www.gnu.org/copyleft/gpl.html'>GNU General Public License</a>.</div>"
+PLG_SYSTEM_BFSTOP_BLOCK_ENABLED_LABEL="Blockierung"
+PLG_SYSTEM_BFSTOP_BLOCK_ENABLED_DESC="Bestimmt ob das Plugin IP-Adressen blockieren soll. Wenn deaktiviert, werden keine neuen Sperren mehr angelegt, und auch bereits eingetragene Sperren ignoriert (obgleich diese erhalten bleiben)."
+PLG_SYSTEM_BFSTOP_USERID_LABEL="Benutzer wählen"
+PLG_SYSTEM_BFSTOP_USERID_DESC="Den Benutzer auswählen, an dessen Email-Adresse die Benachrichtigungen gesendet werden sollen."
+PLG_SYSTEM_BFSTOP_EMAIL_ADDRESS_LABEL="Email-Adresse(n)"
+PLG_SYSTEM_BFSTOP_EMAIL_ADDRESS_DESC="Die Email-Adresse(n) eingeben, an die die Benachrichtigungen gesendet werden sollen. Wenn mehrere Adressen eingegeben werden, müssen diese durch einen Strichpunkt (;) getrennt werden."
+PLG_SYSTEM_BFSTOP_NOTIFY_FAILED_NUMBER_LABEL="Fehlgeschlagen-Nachrichten"
+PLG_SYSTEM_BFSTOP_NOTIFY_FAILED_NUMBER_DESC="Wie oft an einem Tag maximal eine Benachrichtigung über fehlgeschlagene Login-Versuche gesendet werden soll."
+PLG_SYSTEM_BFSTOP_NOTIFY_BLOCKED_NUMBER_LABEL="Blockiert-Nachrichten"
+PLG_SYSTEM_BFSTOP_NOTIFY_BLOCKED_NUMBER_DESC="Wie oft an einem Tag maximal eine Benachrichtigung über blockierte IP-Adressen gesendet werden soll."
+PLG_SYSTEM_BFSTOP_DELAY_DURATION_LABEL="Verzögerung"
+PLG_SYSTEM_BFSTOP_DELAY_DURATION_DESC="Verzögerung (in Sekunden) bei einem fehlgeschlagenen Login-Versuch"
+PLG_SYSTEM_BFSTOP_LOGLEVEL_LABEL="Logging"
+PLG_SYSTEM_BFSTOP_LOGLEVEL_DESC="Bestimmt ob eine Logdatei über die Aktivitäten des Plugins angelegt werden soll (dies sollte nur im Fehlerfall notwendig sein; die Logdatei findet sich im logs-Verzeichnis unter dem Namen plg_system_bfstop.log.php); weiters bestimmt diese Einstellung, wie viel Informationen im Logfile festgehalten werden; je weiter unten in der Liste, desto detailliertere Informationen wird das Logfile enthalten. Ein guter Standard-Wert ist wahrscheinlich 'Warnung' - hier werden alle Warnungen, Fehler und fatalen Fehler im Logfile festgehalten."
+PLG_SYSTEM_BFSTOP_BLOCK_NUMBER_LABEL="Sperrschwelle"
+PLG_SYSTEM_BFSTOP_BLOCK_NUMBER_DESC="Wie oft ein Login von derselben IP-Adresse aus versucht werden kann bevor diese IP-Adresse gesperrt wird."
+PLG_SYSTEM_BFSTOP_BLOCKED_MESSAGE_LABEL="Sperrnachricht"
+PLG_SYSTEM_BFSTOP_BLOCKED_MESSAGE_DESC="Die Nachricht, die dem Benutzer im Browserfenster angezeigt werden soll, wenn dieser nach zu vielen gescheiterten Login-Versuchen gesperrt wurde (wenn leergelassen, wird eine Standard-Nachricht angezeigt: 'Deine IP-Addresse wurde aufgrund zu vieler fehlgeschlagener Login-Versuche gesperrt.')."
+PLG_SYSTEM_BFSTOP_BLOCK_DURATION_LABEL="Sperrdauer"
+PLG_SYSTEM_BFSTOP_BLOCK_DURATION_DESC="Bestimmt wie lange die IP-Sperre aufrecht erhalten werden soll bevor der Zugriff auf die Website wieder erlaubt wird"
+PLG_SYSTEM_BFSTOP_NOTIFY_REMAINING_ATTEMPTS_LABEL="Übrige Versuche"
+PLG_SYSTEM_BFSTOP_NOTIFY_REMAINING_ATTEMPTS_DESC="Schaltet die Benachrichtigung über verbleibende Versuche ein; wenn aktiviert, wird im Login-Formular nach einem fehlgeschlagenen Login-Versuch eine Nachricht mit den verbleibenden Login-Versuchen angezeigt. Diese Einstellung wird nur dann berücksichtigt, wenn Sperren eingeschaltet ist (wenn es nicht eingeschaltet ist, gibt es ja auch keine 'verbleibenden' Versuche)"
+PLG_SYSTEM_BFSTOP_NOTIFY_BLOCKED_USER_LABEL="Benutzer-Block-Nachricht"
+PLG_SYSTEM_BFSTOP_NOTIFY_BLOCKED_USER_DESC="Wenn eingeschaltet, wird an die in der Datenbank hinterlegte Email-Adresse eine Nachricht hinterlegt, wenn eine IP-Adresse gesperrt wird (sofern der Benutzername, mit dem das Login versucht wurde, ein existierender war)"
+PLG_SYSTEM_BFSTOP_USE_HTTP_ERROR_LABEL="Verwende HTTP-Fehler"
+PLG_SYSTEM_BFSTOP_USE_HTTP_ERROR_DESC="Wenn aktiviert, wird der HTTP Statuscode 403 (Forbidden) gesendet wenn die IP-Addresse eines Benutzers gesperrt ist."
+PLG_SYSTEM_BFSTOP_ENABLED="aktiviert"
+PLG_SYSTEM_BFSTOP_DISABLED="deaktiviert"
+PLG_SYSTEM_BFSTOP_NOTIFY_UNLIMITED="unbegrenzt"
+PLG_SYSTEM_BFSTOP_NOTIFY_NEVER="niemals"
+PLG_SYSTEM_BFSTOP_BLOCK_UNLIMITED="unbegrenzt"
+PLG_SYSTEM_BFSTOP_BLOCK_5MINUTES="5 Minuten"
+PLG_SYSTEM_BFSTOP_BLOCK_10MINUTES="10 Minuten"
+PLG_SYSTEM_BFSTOP_BLOCK_15MINUTES="15 Minuten"
+PLG_SYSTEM_BFSTOP_BLOCK_30MINUTES="30 Minuten"
+PLG_SYSTEM_BFSTOP_BLOCK_1HOUR="1 Stunde"
+PLG_SYSTEM_BFSTOP_BLOCK_2HOURS="2 Stunden"
+PLG_SYSTEM_BFSTOP_BLOCK_4HOURS="4 Stunden"
+PLG_SYSTEM_BFSTOP_BLOCK_8HOURS="8 Stunden"
+PLG_SYSTEM_BFSTOP_BLOCK_24HOURS="1 Tag"
+PLG_SYSTEM_BFSTOP_BLOCK_1WEEK="1 Woche"
+PLG_SYSTEM_BFSTOP_BLOCK_30DAYS="30 Tage"
+PLG_SYSTEM_BFSTOP_MAX_BLOCKS_BEFORE_LABEL="Permanent nach"
+PLG_SYSTEM_BFSTOP_MAX_BLOCKS_BEFORE_DESC="Bestimmt nach wie vielen Sperren eine permanente Sperre einer IP-Adresse eingerichtet wird. Zur Bestimmung der Anzahl vorheriger Sperren werden auch solche wiederaufgehobenen Sperren hinzugezählt, die der Benutzer selbst wiederaufgehoben hat; nur per Backend aufgehobene Sperren werden ignoriert"
+PLG_SYSTEM_BFSTOP_MAX_BLOCK_NEVER="Niemals"
+PLG_SYSTEM_BFSTOP_ENABLED_FOR_ORIGIN_LABEL="Aktiv für"
+PLG_SYSTEM_BFSTOP_ENABLED_FOR_ORIGIN_DESC="Bestimmt für welche Teile des Joomla!-Systems das Plugin aktiv ist. Wenn nur für entweder Frontend oder Backend aktiviert, dann wird vom anderen Teil keinerlei Aktion für irgendeine Funktionalität berücksichtigt (wenn zum Beispiel hier 'Nur Backend' eingestellt ist, dann wird nicht nur kein Log über fehlgeschlagene Logins im Frontend geführt, sondern auch erfolgreiche Logins im Frontend werden nicht zu einer Zurücksetzung des Zählers der fehlgeschlagenen Logins für das Backend verwendet). Wichtig: Eine Sperre betrifft immer die gesamte Seite, egal was hier eingestellt ist."
+PLG_SYSTEM_BFSTOP_ENABLED_FOR_FRONTEND="Nur Frontend"
+PLG_SYSTEM_BFSTOP_ENABLED_FOR_BACKEND="Nur Backend"
+PLG_SYSTEM_BFSTOP_ENABLED_FOR_BOTH="Frontend und Backend"
+PLG_SYSTEM_BFSTOP_FATAL="Fatale Fehler"
+PLG_SYSTEM_BFSTOP_INFO="Zusätzliche Information"
+PLG_SYSTEM_BFSTOP_DEBUG="Detailliertes Log"
+PLG_SYSTEM_BFSTOP_DELETE_OLD_ENTRIES_LABEL="Löschen alter Einträge"
+PLG_SYSTEM_BFSTOP_DELETE_OLD_ENTRIES_DESC="Lösche Einträge älter als die in diesem Feld eingegebene Anzahl an Wochen (auf 0 setzen um keine alten Einträge zu löschen)."
+PLG_SYSTEM_BFSTOP_ADAPTIVE_DELAY_LABEL="Adaptives Delay"
+PLG_SYSTEM_BFSTOP_ADAPTIVE_DELAY_DESC="Aktivieren um die Verzögerung bei fehlgeschlagenen Login-Versuchen automatisch an die derzeitige Anzahl an fehlgeschlagenen Logins anzupassen. Wird die Verzögerung angepasst erhöhen wann immer eine erhöhte Anzahl an fehlgeschlagenen Login-Versuchen festgestellt wird, als Gegenmaßnahme gegen verteilte Attacken."
+PLG_SYSTEM_BFSTOP_ADAPTIVE_DELAY_MAX_LABEL="Maximal-Verzögerung"
+PLG_SYSTEM_BFSTOP_ADAPTIVE_DELAY_MAX_DESC="Die maximale Verzögerung der Antwort bei fehlgeschlagenen Nachrichten wenn die adaptive Verzögerung aktiviert ist."
+PLG_SYSTEM_BFSTOP_ADAPTIVE_DELAY_THRSH_MIN_LABEL="Untere Schwelle"
+PLG_SYSTEM_BFSTOP_ADAPTIVE_DELAY_THRSH_MIN_DESC="Die untere Schwelle ab der die adaptive Verzögerung aktiv wird (gemessen in fehlgeschlagenen Logins in der letzten Stunde)"
+PLG_SYSTEM_BFSTOP_ADAPTIVE_DELAY_THRSH_MAX_LABEL="Obere Schwelle"
+PLG_SYSTEM_BFSTOP_ADAPTIVE_DELAY_THRSH_MAX_DESC="Die Schwelle ab der die adaptive Verzögerung die maximale Verzögerung erreichen soll (gemessen in fehlgeschlagenen Logins in der letzten Stunde)"
+PLG_SYSTEM_BFSTOP_DELAY_FIELDSET_LABEL="Verzögerung"
+PLG_SYSTEM_BFSTOP_NOTIFICATION_FIELDSET_LABEL="Benachrichtigung"
+PLG_SYSTEM_BFSTOP_GROUP_NOTIFICATION_ENABLED_LABEL="Benutzergruppen-Nachricht"
+PLG_SYSTEM_BFSTOP_GROUP_NOTIFICATION_ENABLED_DESC="Wenn aktiviert, werden Benachrichtigungen an alle Benutzer gesendet, die Mitglied der unten ausgewählten Gruppe sind."
+PLG_SYSTEM_BFSTOP_USERGROUP_LABEL="Benutzergruppe"
+PLG_SYSTEM_BFSTOP_USERGROUP_DESC="Diejenige Benutzergruppe, an deren Mitglieder Benachrichtigungen über fehlgeschlagene Logins und geblockte IPs gesendet werden (falls oben aktiviert). Gewöhnlich sollte hierfür eine dedizierte Gruppe geschaffen werden, oder eine Gruppe die nur die erfahrensten Administratoren enthält, etwa die 'Super User' Gruppe."
+PLG_SYSTEM_BFSTOP_NOTIFY_USE_PASSWORD_REMINDER_LABEL="Passwort Reset Nachricht"
+PLG_SYSTEM_BFSTOP_NOTIFY_USE_PASSWORD_REMINDER_DESC="Ob und wann bei fehlgeschlagenen Logins eine Benachrichtigung darüber angezeigt werden soll, die Funktionalität zum Zurücksetzen des Passworts zu benutzen."
+PLG_SYSTEM_BFSTOP_REMINDER_NOTIFY_ALWAYS="Immer anzeigen"
+PLG_SYSTEM_BFSTOP_REMINDER_NOTIFY_1LEFT="Wenn 1 Versuch übrig"
+PLG_SYSTEM_BFSTOP_REMINDER_NOTIFY_2LEFT="Wenn 2 Versuche übrig"
+PLG_SYSTEM_BFSTOP_BLOCKED_MSG_SHOWIP_LABEL="IP zeigen"
+PLG_SYSTEM_BFSTOP_BLOCKED_MSG_SHOWIP_DESC="Zeige die IP Adresse des Benutzers (wie vom Server wahrgenommen) wenn blockiert"
