--- a/language/en-GB/en-GB.plg_system_bfstop.sys.ini
+++ b/language/en-GB/en-GB.plg_system_bfstop.sys.ini
@@ -1,78 +1,78 @@
 PLG_SYSTEM_BFSTOP="System - Brute Force Stop"
-PLG_BFSTOP_DESC="<h2>Brute Force Stop</h2><div>This plugin provides means to avert Brute-Force-Attacks on your Joomla-Installation. For this purpose, the plugin stores information on failed login attempts, so that when reaching a configurable number of such failed login attempts the attacker's IP address can be blocked. Furthermore, you can configure notifications about failed logins and blocked IP addresses, as well as a variable delay for a failed login attempt.</div><br /><div><em>Don't forget to configure and publish the plugin after installation!</em><br />If you have any questions on the plugin, please visit the <a href='https://github.com/codeling/bfstop'>project site on github</a>. Should there be any problems when using the plugin, don't hesitate to report them in the <a href='https://github.com/codeling/bfstop/issues'>issue tracker</a>!</div><br /><div>In some parts, this plugin was inspired by the following plugins: Login Failed Log, Redirect Failed Logins and Ban IP Address/Range. Thanks very much for the authors of these plugins!<br />Brute Force Stop is a <a target='_blank' href='http://www.joomla.org/'>Joomla!</a> Plugin, published under the <a target='_blank' title='GNU General Public License' href='http://www.gnu.org/copyleft/gpl.html'>GNU General Public License</a>.</div>"
-BLOCK_ENABLED_LABEL="Enable Blocking"
-BLOCK_ENABLED_DESC="Whether this plugin should block IP addresses. When disabled, no new IP addresses will be added to the list of blocked addresses, and not even IP addresses already on that list will be blocked anymore (the list itself will be preserved, though)."
-USERID_LABEL="Select a User"
-USERID_DESC="Select the user you would like to have notifications to be sent."
-EMAIL_ADDRESS_LABEL="Email Address(es)"
-EMAIL_ADDRESS_DESC="Enter the Email Address(es) where you would like to have notifications to be sent. If you want to specify more than one address, separate them by the semicolon character (;)."
-NOTIFY_FAILED_NUMBER_LABEL="Failed msgs per day"
-NOTIFY_FAILED_NUMBER_DESC="How often to notify about a failed login during one day"
-NOTIFY_BLOCKED_NUMBER_LABEL="Blocked msgs per day"
-NOTIFY_BLOCKED_NUMBER_DESC="How often to notify about a blocked IP during one day"
-DELAY_DURATION_LABEL="Delay"
-DELAY_DURATION_DESC="Delay (in seconds) on a failed login attempt"
-LOGLEVEL_LABEL="Logging"
-LOGLEVEL_DESC="Determines whether a Logfile about the activities of the plugin should be created (this should only be necessary in case of a problem; the logfile can be found in the logs directory under the name plg_system_bfstop.log.php). You can also configure how detailed the log should be; e.g. set to ERROR to only get information about every malfunction into the logfile."
-BLOCK_NUMBER_LABEL="Block threshold"
-BLOCK_NUMBER_DESC="How often a login can be tried until the IP will be blocked"
-BLOCKED_MESSAGE_LABEL="Blocked message"
-BLOCKED_MESSAGE_DESC="The message you'd like to appear in the browser window of a user whose IP has been blocked because of too many failed login attempts. If left empty, this default message will be shown: 'Your IP address has been blocked because there were too many unsuccessful login attempts in a short time.'"
-BLOCK_DURATION_LABEL="Block Duration"
-BLOCK_DURATION_DESC="Determines how long an IP address is blocked before it is allowed to access the site again"
-NOTIFY_REMAINING_ATTEMPTS_LABEL="Remaining attempts"
-NOTIFY_REMAINING_ATTEMPTS_DESC="Enables or disables notifications about remaining attempts; if enabled, the user will, after each failed login attempt, see a message in the login form about how many login attempts still are available before the IP address will be blocked. This setting is only active if blocking is enabled (if blocking is disabled, 'remaining' entries wouldn't make sense)."
-NOTIFY_BLOCKED_USER_LABEL="User Block Message"
-NOTIFY_BLOCKED_USER_DESC="When turned on, in case of a blocked IP address, a notification will be sent to the user which tried to log in (only of course in case it is an existing username)."
-USE_HTTP_ERROR_LABEL="Use HTTP Error"
-USE_HTTP_ERROR_DESC="If enabled, bfstop will send a status code 403 (Forbidden) if the users' IP address is blocked"
-ENABLED="enabled"
-DISABLED="disabled"
-NOTIFY_UNLIMITED="unlimited"
-NOTIFY_NEVER="never"
-BLOCK_UNLIMITED="unlimited"
-BLOCK_5MINUTES="5 Minutes"
-BLOCK_10MINUTES="10 Minutes"
-BLOCK_15MINUTES="15 Minutes"
-BLOCK_30MINUTES="30 Minutes"
-BLOCK_1HOUR="1 Hour"
-BLOCK_2HOURS="2 Hours"
-BLOCK_4HOURS="4 Hours"
-BLOCK_8HOURS="8 Hours"
-BLOCK_24HOURS="1 Day"
-BLOCK_1WEEK="1 Week"
-BLOCK_30DAYS="30 Days"
-MAX_BLOCKS_BEFORE_LABEL="Permanent after"
-MAX_BLOCKS_BEFORE_DESC="Determines after how many blocked attempts a permanent block will be set up. Blocks which were removed (i.e. unblocked) by token do also count; only those done via the backend will be ignored."
-MAX_BLOCK_NEVER="Never"
-ENABLED_FOR_ORIGIN_LABEL="Active for"
-ENABLED_FOR_ORIGIN_DESC="Determines for which parts of the Joomla! system the plugin should be active. If set to only either frontend or backend, the respective other part will not be considered for any functionality (e.g. if configured only for backend, then failed login attempts in frontend will not be logged; but also successful logins in frontend won't reset the failed login counter). Please note that a block always affects the whole site, no matter what is entered here!"
-ENABLED_FOR_FRONTEND="Only Frontend"
-ENABLED_FOR_BACKEND="Only Backend"
-ENABLED_FOR_BOTH="Frontend and Backend"
-FATAL="Fatal error"
-INFO="Informational message"
-DEBUG="Detailed information"
-DELETE_OLD_ENTRIES_LABEL="Prune old attempts"
-DELETE_OLD_ENTRIES_DESC="Delete failed login attempts older than the number of weeks given in this field (set to 0 to disable deletion of old entries)."
-ADAPTIVE_DELAY_LABEL="Adaptive Delay"
-ADAPTIVE_DELAY_DESC="Activate to adapt delay to the current rate of failed login attempts. Will increase the delay whenever there is an increased number of logins as a countermeasure for distributed attacks."
-ADAPTIVE_DELAY_MAX_LABEL="Maximum delay"
-ADAPTIVE_DELAY_MAX_DESC="The maximum delay for the response on failed login attempts when adaptive delay is turned on"
-ADAPTIVE_DELAY_THRSH_MIN_LABEL="Minimum threshold"
-ADAPTIVE_DELAY_THRSH_MIN_DESC="The threshold at which the adaptive delay starts to kick in (measured in number of failed logins in the last hour)"
-ADAPTIVE_DELAY_THRSH_MAX_LABEL="Maximum threshold"
-ADAPTIVE_DELAY_THRSH_MAX_DESC="The threshold at which the adaptive delay reaches the maximum delay (measured in number of failed logins in the last hour)"
-DELAY_FIELDSET_LABEL="Delay"
-NOTIFICATION_FIELDSET_LABEL="Notification"
-GROUP_NOTIFICATION_ENABLED_LABEL="User group notification"
-GROUP_NOTIFICATION_ENABLED_DESC="If enabled, the whole user group selected below will be notified in case of failed logins/banned IPs"
-USERGROUP_LABEL="User group"
-USERGROUP_DESC="Choose a user group from which to notify every member about failed logins and banned IPs (if activated above). Probably you will want to create a dedicated group for this, or use a group which holds only your most experienced administrators, like the default 'Super Users' group."
-NOTIFY_USE_PASSWORD_REMINDER_LABEL="Password reset reminder"
-NOTIFY_USE_PASSWORD_REMINDER_DESC="Whether and when to show a reminder about using the password reminder functionality on a failed login"
-REMINDER_NOTIFY_ALWAYS="Always"
-REMINDER_NOTIFY_1LEFT="When 1 attempt left"
-REMINDER_NOTIFY_2LEFT="When 2 attempts left"
-BLOCKED_MSG_SHOWIP_LABEL="Show IP"
-BLOCKED_MSG_SHOWIP_DESC="When blocked, show the user his IP address (as perceived by the server)"
+PLG_SYSTEM_BFSTOP_DESC="<h2>Brute Force Stop</h2><div>This plugin provides means to avert Brute-Force-Attacks on your Joomla-Installation. For this purpose, the plugin stores information on failed login attempts, so that when reaching a configurable number of such failed login attempts the attacker's IP address can be blocked. Furthermore, you can configure notifications about failed logins and blocked IP addresses, as well as a variable delay for a failed login attempt.</div><br /><div><em>Don't forget to configure and publish the plugin after installation!</em><br />If you have any questions on the plugin, please visit the <a href='https://github.com/codeling/bfstop'>project site on github</a>. Should there be any problems when using the plugin, don't hesitate to report them in the <a href='https://github.com/codeling/bfstop/issues'>issue tracker</a>!</div><br /><div>In some parts, this plugin was inspired by the following plugins: Login Failed Log, Redirect Failed Logins and Ban IP Address/Range. Thanks very much for the authors of these plugins!<br />Brute Force Stop is a <a target='_blank' href='http://www.joomla.org/'>Joomla!</a> Plugin, published under the <a target='_blank' title='GNU General Public License' href='http://www.gnu.org/copyleft/gpl.html'>GNU General Public License</a>.</div>"
+PLG_SYSTEM_BFSTOP_BLOCK_ENABLED_LABEL="Enable Blocking"
+PLG_SYSTEM_BFSTOP_BLOCK_ENABLED_DESC="Whether this plugin should block IP addresses. When disabled, no new IP addresses will be added to the list of blocked addresses, and not even IP addresses already on that list will be blocked anymore (the list itself will be preserved, though)."
+PLG_SYSTEM_BFSTOP_USERID_LABEL="Select a User"
+PLG_SYSTEM_BFSTOP_USERID_DESC="Select the user you would like to have notifications to be sent."
+PLG_SYSTEM_BFSTOP_EMAIL_ADDRESS_LABEL="Email Address(es)"
+PLG_SYSTEM_BFSTOP_EMAIL_ADDRESS_DESC="Enter the Email Address(es) where you would like to have notifications to be sent. If you want to specify more than one address, separate them by the semicolon character (;)."
+PLG_SYSTEM_BFSTOP_NOTIFY_FAILED_NUMBER_LABEL="Failed msgs per day"
+PLG_SYSTEM_BFSTOP_NOTIFY_FAILED_NUMBER_DESC="How often to notify about a failed login during one day"
+PLG_SYSTEM_BFSTOP_NOTIFY_BLOCKED_NUMBER_LABEL="Blocked msgs per day"
+PLG_SYSTEM_BFSTOP_NOTIFY_BLOCKED_NUMBER_DESC="How often to notify about a blocked IP during one day"
+PLG_SYSTEM_BFSTOP_DELAY_DURATION_LABEL="Delay"
+PLG_SYSTEM_BFSTOP_DELAY_DURATION_DESC="Delay (in seconds) on a failed login attempt"
+PLG_SYSTEM_BFSTOP_LOGLEVEL_LABEL="Logging"
+PLG_SYSTEM_BFSTOP_LOGLEVEL_DESC="Determines whether a Logfile about the activities of the plugin should be created (this should only be necessary in case of a problem; the logfile can be found in the logs directory under the name plg_system_bfstop.log.php). You can also configure how detailed the log should be; e.g. set to ERROR to only get information about every malfunction into the logfile."
+PLG_SYSTEM_BFSTOP_BLOCK_NUMBER_LABEL="Block threshold"
+PLG_SYSTEM_BFSTOP_BLOCK_NUMBER_DESC="How often a login can be tried until the IP will be blocked"
+PLG_SYSTEM_BFSTOP_BLOCKED_MESSAGE_LABEL="Blocked message"
+PLG_SYSTEM_BFSTOP_BLOCKED_MESSAGE_DESC="The message you'd like to appear in the browser window of a user whose IP has been blocked because of too many failed login attempts. If left empty, this default message will be shown: 'Your IP address has been blocked because there were too many unsuccessful login attempts in a short time.'"
+PLG_SYSTEM_BFSTOP_BLOCK_DURATION_LABEL="Block Duration"
+PLG_SYSTEM_BFSTOP_BLOCK_DURATION_DESC="Determines how long an IP address is blocked before it is allowed to access the site again"
+PLG_SYSTEM_BFSTOP_NOTIFY_REMAINING_ATTEMPTS_LABEL="Remaining attempts"
+PLG_SYSTEM_BFSTOP_NOTIFY_REMAINING_ATTEMPTS_DESC="Enables or disables notifications about remaining attempts; if enabled, the user will, after each failed login attempt, see a message in the login form about how many login attempts still are available before the IP address will be blocked. This setting is only active if blocking is enabled (if blocking is disabled, 'remaining' entries wouldn't make sense)."
+PLG_SYSTEM_BFSTOP_NOTIFY_BLOCKED_USER_LABEL="User Block Message"
+PLG_SYSTEM_BFSTOP_NOTIFY_BLOCKED_USER_DESC="When turned on, in case of a blocked IP address, a notification will be sent to the user which tried to log in (only of course in case it is an existing username)."
+PLG_SYSTEM_BFSTOP_USE_HTTP_ERROR_LABEL="Use HTTP Error"
+PLG_SYSTEM_BFSTOP_USE_HTTP_ERROR_DESC="If enabled, bfstop will send a status code 403 (Forbidden) if the users' IP address is blocked"
+PLG_SYSTEM_BFSTOP_ENABLED="enabled"
+PLG_SYSTEM_BFSTOP_DISABLED="disabled"
+PLG_SYSTEM_BFSTOP_NOTIFY_UNLIMITED="unlimited"
+PLG_SYSTEM_BFSTOP_NOTIFY_NEVER="never"
+PLG_SYSTEM_BFSTOP_BLOCK_UNLIMITED="unlimited"
+PLG_SYSTEM_BFSTOP_BLOCK_5MINUTES="5 Minutes"
+PLG_SYSTEM_BFSTOP_BLOCK_10MINUTES="10 Minutes"
+PLG_SYSTEM_BFSTOP_BLOCK_15MINUTES="15 Minutes"
+PLG_SYSTEM_BFSTOP_BLOCK_30MINUTES="30 Minutes"
+PLG_SYSTEM_BFSTOP_BLOCK_1HOUR="1 Hour"
+PLG_SYSTEM_BFSTOP_BLOCK_2HOURS="2 Hours"
+PLG_SYSTEM_BFSTOP_BLOCK_4HOURS="4 Hours"
+PLG_SYSTEM_BFSTOP_BLOCK_8HOURS="8 Hours"
+PLG_SYSTEM_BFSTOP_BLOCK_24HOURS="1 Day"
+PLG_SYSTEM_BFSTOP_BLOCK_1WEEK="1 Week"
+PLG_SYSTEM_BFSTOP_BLOCK_30DAYS="30 Days"
+PLG_SYSTEM_BFSTOP_MAX_BLOCKS_BEFORE_LABEL="Permanent after"
+PLG_SYSTEM_BFSTOP_MAX_BLOCKS_BEFORE_DESC="Determines after how many blocked attempts a permanent block will be set up. Blocks which were removed (i.e. unblocked) by token do also count; only those done via the backend will be ignored."
+PLG_SYSTEM_BFSTOP_MAX_BLOCK_NEVER="Never"
+PLG_SYSTEM_BFSTOP_ENABLED_FOR_ORIGIN_LABEL="Active for"
+PLG_SYSTEM_BFSTOP_ENABLED_FOR_ORIGIN_DESC="Determines for which parts of the Joomla! system the plugin should be active. If set to only either frontend or backend, the respective other part will not be considered for any functionality (e.g. if configured only for backend, then failed login attempts in frontend will not be logged; but also successful logins in frontend won't reset the failed login counter). Please note that a block always affects the whole site, no matter what is entered here!"
+PLG_SYSTEM_BFSTOP_ENABLED_FOR_FRONTEND="Only Frontend"
+PLG_SYSTEM_BFSTOP_ENABLED_FOR_BACKEND="Only Backend"
+PLG_SYSTEM_BFSTOP_ENABLED_FOR_BOTH="Frontend and Backend"
+PLG_SYSTEM_BFSTOP_FATAL="Fatal error"
+PLG_SYSTEM_BFSTOP_INFO="Informational message"
+PLG_SYSTEM_BFSTOP_DEBUG="Detailed information"
+PLG_SYSTEM_BFSTOP_DELETE_OLD_ENTRIES_LABEL="Prune old attempts"
+PLG_SYSTEM_BFSTOP_DELETE_OLD_ENTRIES_DESC="Delete failed login attempts older than the number of weeks given in this field (set to 0 to disable deletion of old entries)."
+PLG_SYSTEM_BFSTOP_ADAPTIVE_DELAY_LABEL="Adaptive Delay"
+PLG_SYSTEM_BFSTOP_ADAPTIVE_DELAY_DESC="Activate to adapt delay to the current rate of failed login attempts. Will increase the delay whenever there is an increased number of logins as a countermeasure for distributed attacks."
+PLG_SYSTEM_BFSTOP_ADAPTIVE_DELAY_MAX_LABEL="Maximum delay"
+PLG_SYSTEM_BFSTOP_ADAPTIVE_DELAY_MAX_DESC="The maximum delay for the response on failed login attempts when adaptive delay is turned on"
+PLG_SYSTEM_BFSTOP_ADAPTIVE_DELAY_THRSH_MIN_LABEL="Minimum threshold"
+PLG_SYSTEM_BFSTOP_ADAPTIVE_DELAY_THRSH_MIN_DESC="The threshold at which the adaptive delay starts to kick in (measured in number of failed logins in the last hour)"
+PLG_SYSTEM_BFSTOP_ADAPTIVE_DELAY_THRSH_MAX_LABEL="Maximum threshold"
+PLG_SYSTEM_BFSTOP_ADAPTIVE_DELAY_THRSH_MAX_DESC="The threshold at which the adaptive delay reaches the maximum delay (measured in number of failed logins in the last hour)"
+PLG_SYSTEM_BFSTOP_DELAY_FIELDSET_LABEL="Delay"
+PLG_SYSTEM_BFSTOP_NOTIFICATION_FIELDSET_LABEL="Notification"
+PLG_SYSTEM_BFSTOP_GROUP_NOTIFICATION_ENABLED_LABEL="User group notification"
+PLG_SYSTEM_BFSTOP_GROUP_NOTIFICATION_ENABLED_DESC="If enabled, the whole user group selected below will be notified in case of failed logins/banned IPs"
+PLG_SYSTEM_BFSTOP_USERGROUP_LABEL="User group"
+PLG_SYSTEM_BFSTOP_USERGROUP_DESC="Choose a user group from which to notify every member about failed logins and banned IPs (if activated above). Probably you will want to create a dedicated group for this, or use a group which holds only your most experienced administrators, like the default 'Super Users' group."
+PLG_SYSTEM_BFSTOP_NOTIFY_USE_PASSWORD_REMINDER_LABEL="Password reset reminder"
+PLG_SYSTEM_BFSTOP_NOTIFY_USE_PASSWORD_REMINDER_DESC="Whether and when to show a reminder about using the password reminder functionality on a failed login"
+PLG_SYSTEM_BFSTOP_REMINDER_NOTIFY_ALWAYS="Always"
+PLG_SYSTEM_BFSTOP_REMINDER_NOTIFY_1LEFT="When 1 attempt left"
+PLG_SYSTEM_BFSTOP_REMINDER_NOTIFY_2LEFT="When 2 attempts left"
+PLG_SYSTEM_BFSTOP_BLOCKED_MSG_SHOWIP_LABEL="Show IP"
+PLG_SYSTEM_BFSTOP_BLOCKED_MSG_SHOWIP_DESC="When blocked, show the user his IP address (as perceived by the server)"
