--- a/language/fr-FR/fr-FR.plg_system_bfstop.sys.ini
+++ b/language/fr-FR/fr-FR.plg_system_bfstop.sys.ini
@@ -3,85 +3,85 @@
 ; Fichier de traduction pour ./plugins/system/bfstop/language/fr-FR/
 
 PLG_SYSTEM_BFSTOP="System - Brute Force Stop"
-PLG_BFSTOP_DESC="<h2>Brute Force Stop</h2><div>Ce plug-in fournit des moyens pour prévenir des attaques de votre site Joomla. À cette fin, le plug-in stocke des informations sur les échecs de connexion, de sorte qu'au terme d'un certain nombre (configurable) de tentatives l'adresse IP de l'attaquant peut être bloquée. En outre, vous pouvez configurer la notification des connexions échouées et des adresses bloquées, aussi bien qu'un délai variable entre chaque tentative de connexion autorisée.</div><br /><div><em>N'oubliez pas de configurer et de publier ce plugin après installation!</em><br />Si vous avez des questions, merci de visiter le <a href='https://github.com/codeling/bfstop'>site du projet sur github</a>. En cas de difficultés d'utilisation, n'hésitez pas à les rapporter <a href='https://github.com/codeling/bfstop/issues'>ici </a>!</div><br /><div>Ce plugin s'inspire pour partie des plugins suivants: Login Failed Log, Redirect Failed Logins and Ban IP Address/Range. Merci beaucoup aux auteurs de ces plugins!<br />Brute Force Stop est un plugin <a target='_blank' href='http://www.joomla.org/'>Joomla!</a>, publié sous la <a target='_blank' title='GNU General Public License' href='http://www.gnu.org/copyleft/gpl.html'>GNU General Public License</a>.</div>"
-BLOCK_ENABLED_LABEL="Activation du blocage"
-BLOCK_ENABLED_DESC="Active le blocage des adresses IP. En cas de désactivation, aucune nouvelle adresse IP ne sera ajoutée à la liste des adresses bloquées. Même les adresses IP déjà listées ne seront pas bloquées, mais la liste elle-même sera conservée."
-USERID_LABEL="Sélection de l'utilisateur"
-USERID_DESC="Utilisateur dont l'adresse électronique est utilisée en tant qu'adresse destinataire des courriels de notification (sous réserve que l'adresse de notification ci-dessus soit configurée en mode 'Utilisateur sélectionné')."
-EMAIL_ADDRESS_LABEL="Adresse(s) électronique(s)"
-EMAIL_ADDRESS_DESC="Adresse(s) électronique(s) utilisée(s) en tant qu'adresse(s) destinataire(s) des courriels de notification. Pour spécifier plusieurs adresses, utiliser le séparateur ';'."
-NOTIFY_FAILED_NUMBER_LABEL="Notification des échecs de connexion (msg/j)"
-NOTIFY_FAILED_NUMBER_DESC="Combien d'échecs de connexion au maximum notifier par jour ?"
-NOTIFY_BLOCKED_NUMBER_LABEL="Notification des blocages d'adresses IP (msg/j)"
-NOTIFY_BLOCKED_NUMBER_DESC="Combien de blocages d'addresses IP au maximum notifier par jour ?"
-DELAY_DURATION_LABEL="Délai de reconnexion"
-DELAY_DURATION_DESC="Délai (en secondes) avant nouvelle tentative de connexion autorisée"
-LOGLEVEL_LABEL="Journal d'activité"
-LOGLEVEL_DESC="Active le journal d'activité (nécessaire en cas de difficultés; le fichier journal se trouve dans le répertoire des logs sous le nom 'plg_system_bfstop.log.php')"
-BLOCK_NUMBER_LABEL="Seuil de blocage"
-BLOCK_NUMBER_DESC="Nombre de tentatives autorisées avant blocage"
-BLOCKED_MESSAGE_LABEL="Message de blocage"
-BLOCKED_MESSAGE_DESC="Le message à faire apparaître dans le navigateur de l'utilisateur qui voit son adresse IP bloquée en raison d'utilisation à plusieurs reprises de codes d'accès erronés. Si laissé vide, le message par défaut sera affiché: 'Votre adresse IP a été bloquée en raison d'une utilisation, à plusieurs reprises et durant un laps de temps très court, de codes d'accès erronés.'"
-BLOCK_DURATION_LABEL="Durée de blocage"
-BLOCK_DURATION_DESC="Configuration de la durée de blocage de l'adresse IP avant réouverture de l'accès"
-NOTIFY_REMAINING_ATTEMPTS_LABEL="Affichage du nombre de tentatives restantes"
-NOTIFY_REMAINING_ATTEMPTS_DESC="Active ou désactive la notification utilisateur du nombre de tentatives autorisées avant blocage; en cas d'activation, l'utilisateur reçoit, après chaque tentative de connexion, un message dans la fenêtre de connexion l'informant du nombre de tentatives restantes avant blocage. Cette option n'est naturellement pas pertinente si l'option de blocage n'est pas activée."
-NOTIFY_BLOCKED_USER_LABEL="Message à l'utilisateur impacté"
-NOTIFY_BLOCKED_USER_DESC="En cas de blocage d'une adresse IP, lorsque cette option est activée, un message sera transmis, le cas échéant, à l'utilisateur dont l'identifiant aura été utilisé lors des tentatives de connexion."
-ENABLED="activé"
-DISABLED="désactivé"
-NOTIFY_UNLIMITED="sans limite"
-NOTIFY_NEVER="aucun"
-BLOCK_UNLIMITED="sans limite"
-BLOCK_5MINUTES="5 Minutes"
-BLOCK_10MINUTES="10 Minutes"
-BLOCK_15MINUTES="15 Minutes"
-BLOCK_30MINUTES="30 Minutes"
-BLOCK_1HOUR="1 Heure"
-BLOCK_2HOURS="2 Heures"
-BLOCK_4HOURS="4 Heures"
-BLOCK_8HOURS="8 Heures"
-BLOCK_24HOURS="1 Jour"
-; Ajouté à compter de la version 0.9.11
-MAX_BLOCKS_BEFORE_LABEL="Déclenchement du blocage permanent"
-MAX_BLOCKS_BEFORE_DESC="Permet la mise en place d'un blocage permanent au terme d'un certain nombre de blocages temporaires (les blocages résolus via l'interface d'administration ne sont pas comptabilisés)."
-MAX_BLOCK_NEVER="Jamais"
-ENABLED_FOR_ORIGIN_LABEL="Activé pour"
-ENABLED_FOR_ORIGIN_DESC="Permet de sélectionner les points d'entrée où le contrôle d'accés doit être mis en place : interface d'administration et/ou frontal du site. Si le contrôle d'accès est mis en place sur un seul point d'entrée, alors les accès via le point d'entrée non contrôlé ne pourront être pris en compte dans le contrôle d'accès (par exemple, en cas de contrôle mis en place au niveau de la seule interface d'administration, les tentatives d'accès via le frontal du site ne seront pas prises en compte. De même, des connexions réussies via le frontal du site ne pourront pas remettre a zéro le compteur d'accès incrémenté au niveau de l'interface d'administration). Lorsqu'un blocage est déclenché, veuillez également noter que celui-ci affectera la totalité du site (frontal et administration) quel que soit le point d'entrée contrôlé."
-ENABLED_FOR_FRONTEND="Frontal uniquement"
-ENABLED_FOR_BACKEND="Administration uniquement"
-ENABLED_FOR_BOTH="Frontal ET Administration"
-FATAL="Erreur fatale"
-INFO="Message d'information"
-DEBUG="Information détaillée"
-; Ajouté à compter de la version 1.0.0 Beta
-USE_HTTP_ERROR_LABEL="Utiliser les codes erreur HTTP"
-USE_HTTP_ERROR_DESC="Si cette option est activée, bfstop enverra un code erreur 403 (accès interdit) à l'utilisateur d'une adresse IP bloquée"
-; Ajouté à compter de la version 1.1.0
-DELETE_OLD_ENTRIES_LABEL="Effacement des anciennes entrées"
-DELETE_OLD_ENTRIES_DESC="Efface les entrées dont l'ancienneté excède le nombre de semaines indiqué dans ce champ de saisie (indiquer 0 pour désactiver cette fonction d'effacement automatique)."
-ADAPTIVE_DELAY_LABEL="Délai adaptatif"
-ADAPTIVE_DELAY_DESC="Adaptation du délai avant reconnexion au nombre de connexions échouées. Augmente le délai en cas d'accroissement du nombre de connexions comme contre-mesure aux attaques distribuées."
-ADAPTIVE_DELAY_MAX_LABEL="Délai maximum"
-ADAPTIVE_DELAY_MAX_DESC="Le délai maximum de reconnexion lorsque le délai adaptatif est actif"
-ADAPTIVE_DELAY_THRSH_MIN_LABEL="Seuil minimal"
-ADAPTIVE_DELAY_THRSH_MIN_DESC="Le seuil à partir duquel le délai adaptatif entre en fonction (mesuré à travers le nombre de connexions échouées dans la dernière heure)"
-ADAPTIVE_DELAY_THRSH_MAX_LABEL="Seuil maximal"
-ADAPTIVE_DELAY_THRSH_MAX_DESC="Le seuil à partir duquel le délai adaptatif est maximal (mesuré à travers le nombre de connexions échouées dans la dernière heure)"
-DELAY_FIELDSET_LABEL="Délai"
-; Ajouté à compter de la version 1.2.0 Beta1
-BLOCK_1WEEK="1 semaine"
-BLOCK_30DAYS="30 jours"
-NOTIFICATION_FIELDSET_LABEL="Notification"
-GROUP_NOTIFICATION_ENABLED_LABEL="Notification du groupe d'utilisateurs"
-GROUP_NOTIFICATION_ENABLED_DESC="En cas d'activation, la totalité des utilisateurs du groupe d'utilisateurs sélectionné ci-dessous sera informée des échecs de connexion / banissements d'adresses IP"
-USERGROUP_LABEL="Groupe d'utilisateurs"
-USERGROUP_DESC="Indiquer le groupe d'utilisateurs à informer des échecs de connexion / banissements d'adresses IP. Cela suppose l'existence dans Joomla d'un groupe d'utilisateurs adapté à cet usage (par exemple, le  groupe 'Super Users')."
-; Ajouté à compter de la version 1.3.0 Beta1
-NOTIFY_USE_PASSWORD_REMINDER_LABEL="Réinitialisation du mot de passe : aide-mémoire"
-NOTIFY_USE_PASSWORD_REMINDER_DESC="Opportunité et modalités de rappel de l'usage de la fonctionnalité de réinitialisation du mot de passe en cas d'échec de connexion"
-REMINDER_NOTIFY_ALWAYS="Toujours"
-REMINDER_NOTIFY_1LEFT="Après 1 échec de connexion"
-REMINDER_NOTIFY_2LEFT="Après 2 échecs de connexion"
-BLOCKED_MSG_SHOWIP_LABEL="Affichage IP"
-BLOCKED_MSG_SHOWIP_DESC="En cas de blocage, indique à l'internaute son adresse IP (telle que relevée par le serveur)"
+PLG_SYSTEM_BFSTOP_DESC="<h2>Brute Force Stop</h2><div>Ce plug-in fournit des moyens pour prévenir des attaques de votre site Joomla. À cette fin, le plug-in stocke des informations sur les échecs de connexion, de sorte qu'au terme d'un certain nombre (configurable) de tentatives l'adresse IP de l'attaquant peut être bloquée. En outre, vous pouvez configurer la notification des connexions échouées et des adresses bloquées, aussi bien qu'un délai variable entre chaque tentative de connexion autorisée.</div><br /><div><em>N'oubliez pas de configurer et de publier ce plugin après installation!</em><br />Si vous avez des questions, merci de visiter le <a href='https://github.com/codeling/bfstop'>site du projet sur github</a>. En cas de difficultés d'utilisation, n'hésitez pas à les rapporter <a href='https://github.com/codeling/bfstop/issues'>ici </a>!</div><br /><div>Ce plugin s'inspire pour partie des plugins suivants: Login Failed Log, Redirect Failed Logins and Ban IP Address/Range. Merci beaucoup aux auteurs de ces plugins!<br />Brute Force Stop est un plugin <a target='_blank' href='http://www.joomla.org/'>Joomla!</a>, publié sous la <a target='_blank' title='GNU General Public License' href='http://www.gnu.org/copyleft/gpl.html'>GNU General Public License</a>.</div>"
+PLG_SYSTEM_BFSTOP_BLOCK_ENABLED_LABEL="Activation du blocage"
+PLG_SYSTEM_BFSTOP_BLOCK_ENABLED_DESC="Active le blocage des adresses IP. En cas de désactivation, aucune nouvelle adresse IP ne sera ajoutée à la liste des adresses bloquées. Même les adresses IP déjà listées ne seront pas bloquées, mais la liste elle-même sera conservée."
+PLG_SYSTEM_BFSTOP_USERID_LABEL="Sélection de l'utilisateur"
+PLG_SYSTEM_BFSTOP_USERID_DESC="Utilisateur dont l'adresse électronique est utilisée en tant qu'adresse destinataire des courriels de notification (sous réserve que l'adresse de notification ci-dessus soit configurée en mode 'Utilisateur sélectionné')."
+PLG_SYSTEM_BFSTOP_EMAIL_ADDRESS_LABEL="Adresse(s) électronique(s)"
+PLG_SYSTEM_BFSTOP_EMAIL_ADDRESS_DESC="Adresse(s) électronique(s) utilisée(s) en tant qu'adresse(s) destinataire(s) des courriels de notification. Pour spécifier plusieurs adresses, utiliser le séparateur ';'."
+PLG_SYSTEM_BFSTOP_NOTIFY_FAILED_NUMBER_LABEL="Notification des échecs de connexion (msg/j)"
+PLG_SYSTEM_BFSTOP_NOTIFY_FAILED_NUMBER_DESC="Combien d'échecs de connexion au maximum notifier par jour ?"
+PLG_SYSTEM_BFSTOP_NOTIFY_BLOCKED_NUMBER_LABEL="Notification des blocages d'adresses IP (msg/j)"
+PLG_SYSTEM_BFSTOP_NOTIFY_BLOCKED_NUMBER_DESC="Combien de blocages d'addresses IP au maximum notifier par jour ?"
+PLG_SYSTEM_BFSTOP_DELAY_DURATION_LABEL="Délai de reconnexion"
+PLG_SYSTEM_BFSTOP_DELAY_DURATION_DESC="Délai (en secondes) avant nouvelle tentative de connexion autorisée"
+PLG_SYSTEM_BFSTOP_LOGLEVEL_LABEL="Journal d'activité"
+PLG_SYSTEM_BFSTOP_LOGLEVEL_DESC="Active le journal d'activité (nécessaire en cas de difficultés; le fichier journal se trouve dans le répertoire des logs sous le nom 'plg_system_bfstop.log.php')"
+PLG_SYSTEM_BFSTOP_BLOCK_NUMBER_LABEL="Seuil de blocage"
+PLG_SYSTEM_BFSTOP_BLOCK_NUMBER_DESC="Nombre de tentatives autorisées avant blocage"
+PLG_SYSTEM_BFSTOP_BLOCKED_MESSAGE_LABEL="Message de blocage"
+PLG_SYSTEM_BFSTOP_BLOCKED_MESSAGE_DESC="Le message à faire apparaître dans le navigateur de l'utilisateur qui voit son adresse IP bloquée en raison d'utilisation à plusieurs reprises de codes d'accès erronés. Si laissé vide, le message par défaut sera affiché: 'Votre adresse IP a été bloquée en raison d'une utilisation, à plusieurs reprises et durant un laps de temps très court, de codes d'accès erronés.'"
+PLG_SYSTEM_BFSTOP_BLOCK_DURATION_LABEL="Durée de blocage"
+PLG_SYSTEM_BFSTOP_BLOCK_DURATION_DESC="Configuration de la durée de blocage de l'adresse IP avant réouverture de l'accès"
+PLG_SYSTEM_BFSTOP_NOTIFY_REMAINING_ATTEMPTS_LABEL="Affichage du nombre de tentatives restantes"
+PLG_SYSTEM_BFSTOP_NOTIFY_REMAINING_ATTEMPTS_DESC="Active ou désactive la notification utilisateur du nombre de tentatives autorisées avant blocage; en cas d'activation, l'utilisateur reçoit, après chaque tentative de connexion, un message dans la fenêtre de connexion l'informant du nombre de tentatives restantes avant blocage. Cette option n'est naturellement pas pertinente si l'option de blocage n'est pas activée."
+PLG_SYSTEM_BFSTOP_NOTIFY_BLOCKED_USER_LABEL="Message à l'utilisateur impacté"
+PLG_SYSTEM_BFSTOP_NOTIFY_BLOCKED_USER_DESC="En cas de blocage d'une adresse IP, lorsque cette option est activée, un message sera transmis, le cas échéant, à l'utilisateur dont l'identifiant aura été utilisé lors des tentatives de connexion."
+PLG_SYSTEM_BFSTOP_ENABLED="activé"
+PLG_SYSTEM_BFSTOP_DISABLED="désactivé"
+PLG_SYSTEM_BFSTOP_NOTIFY_UNLIMITED="sans limite"
+PLG_SYSTEM_BFSTOP_NOTIFY_NEVER="aucun"
+PLG_SYSTEM_BFSTOP_BLOCK_UNLIMITED="sans limite"
+PLG_SYSTEM_BFSTOP_BLOCK_5MINUTES="5 Minutes"
+PLG_SYSTEM_BFSTOP_BLOCK_10MINUTES="10 Minutes"
+PLG_SYSTEM_BFSTOP_BLOCK_15MINUTES="15 Minutes"
+PLG_SYSTEM_BFSTOP_BLOCK_30MINUTES="30 Minutes"
+PLG_SYSTEM_BFSTOP_BLOCK_1HOUR="1 Heure"
+PLG_SYSTEM_BFSTOP_BLOCK_2HOURS="2 Heures"
+PLG_SYSTEM_BFSTOP_BLOCK_4HOURS="4 Heures"
+PLG_SYSTEM_BFSTOP_BLOCK_8HOURS="8 Heures"
+PLG_SYSTEM_BFSTOP_BLOCK_24HOURS="1 Jour"
+PLG_SYSTEM_BFSTOP_; Ajouté à compter de la version 0.9.11
+PLG_SYSTEM_BFSTOP_MAX_BLOCKS_BEFORE_LABEL="Déclenchement du blocage permanent"
+PLG_SYSTEM_BFSTOP_MAX_BLOCKS_BEFORE_DESC="Permet la mise en place d'un blocage permanent au terme d'un certain nombre de blocages temporaires (les blocages résolus via l'interface d'administration ne sont pas comptabilisés)."
+PLG_SYSTEM_BFSTOP_MAX_BLOCK_NEVER="Jamais"
+PLG_SYSTEM_BFSTOP_ENABLED_FOR_ORIGIN_LABEL="Activé pour"
+PLG_SYSTEM_BFSTOP_ENABLED_FOR_ORIGIN_DESC="Permet de sélectionner les points d'entrée où le contrôle d'accés doit être mis en place : interface d'administration et/ou frontal du site. Si le contrôle d'accès est mis en place sur un seul point d'entrée, alors les accès via le point d'entrée non contrôlé ne pourront être pris en compte dans le contrôle d'accès (par exemple, en cas de contrôle mis en place au niveau de la seule interface d'administration, les tentatives d'accès via le frontal du site ne seront pas prises en compte. De même, des connexions réussies via le frontal du site ne pourront pas remettre a zéro le compteur d'accès incrémenté au niveau de l'interface d'administration). Lorsqu'un blocage est déclenché, veuillez également noter que celui-ci affectera la totalité du site (frontal et administration) quel que soit le point d'entrée contrôlé."
+PLG_SYSTEM_BFSTOP_ENABLED_FOR_FRONTEND="Frontal uniquement"
+PLG_SYSTEM_BFSTOP_ENABLED_FOR_BACKEND="Administration uniquement"
+PLG_SYSTEM_BFSTOP_ENABLED_FOR_BOTH="Frontal ET Administration"
+PLG_SYSTEM_BFSTOP_FATAL="Erreur fatale"
+PLG_SYSTEM_BFSTOP_INFO="Message d'information"
+PLG_SYSTEM_BFSTOP_DEBUG="Information détaillée"
+PLG_SYSTEM_BFSTOP_; Ajouté à compter de la version 1.0.0 Beta
+PLG_SYSTEM_BFSTOP_USE_HTTP_ERROR_LABEL="Utiliser les codes erreur HTTP"
+PLG_SYSTEM_BFSTOP_USE_HTTP_ERROR_DESC="Si cette option est activée, bfstop enverra un code erreur 403 (accès interdit) à l'utilisateur d'une adresse IP bloquée"
+PLG_SYSTEM_BFSTOP_; Ajouté à compter de la version 1.1.0
+PLG_SYSTEM_BFSTOP_DELETE_OLD_ENTRIES_LABEL="Effacement des anciennes entrées"
+PLG_SYSTEM_BFSTOP_DELETE_OLD_ENTRIES_DESC="Efface les entrées dont l'ancienneté excède le nombre de semaines indiqué dans ce champ de saisie (indiquer 0 pour désactiver cette fonction d'effacement automatique)."
+PLG_SYSTEM_BFSTOP_ADAPTIVE_DELAY_LABEL="Délai adaptatif"
+PLG_SYSTEM_BFSTOP_ADAPTIVE_DELAY_DESC="Adaptation du délai avant reconnexion au nombre de connexions échouées. Augmente le délai en cas d'accroissement du nombre de connexions comme contre-mesure aux attaques distribuées."
+PLG_SYSTEM_BFSTOP_ADAPTIVE_DELAY_MAX_LABEL="Délai maximum"
+PLG_SYSTEM_BFSTOP_ADAPTIVE_DELAY_MAX_DESC="Le délai maximum de reconnexion lorsque le délai adaptatif est actif"
+PLG_SYSTEM_BFSTOP_ADAPTIVE_DELAY_THRSH_MIN_LABEL="Seuil minimal"
+PLG_SYSTEM_BFSTOP_ADAPTIVE_DELAY_THRSH_MIN_DESC="Le seuil à partir duquel le délai adaptatif entre en fonction (mesuré à travers le nombre de connexions échouées dans la dernière heure)"
+PLG_SYSTEM_BFSTOP_ADAPTIVE_DELAY_THRSH_MAX_LABEL="Seuil maximal"
+PLG_SYSTEM_BFSTOP_ADAPTIVE_DELAY_THRSH_MAX_DESC="Le seuil à partir duquel le délai adaptatif est maximal (mesuré à travers le nombre de connexions échouées dans la dernière heure)"
+PLG_SYSTEM_BFSTOP_DELAY_FIELDSET_LABEL="Délai"
+PLG_SYSTEM_BFSTOP_; Ajouté à compter de la version 1.2.0 Beta1
+PLG_SYSTEM_BFSTOP_BLOCK_1WEEK="1 semaine"
+PLG_SYSTEM_BFSTOP_BLOCK_30DAYS="30 jours"
+PLG_SYSTEM_BFSTOP_NOTIFICATION_FIELDSET_LABEL="Notification"
+PLG_SYSTEM_BFSTOP_GROUP_NOTIFICATION_ENABLED_LABEL="Notification du groupe d'utilisateurs"
+PLG_SYSTEM_BFSTOP_GROUP_NOTIFICATION_ENABLED_DESC="En cas d'activation, la totalité des utilisateurs du groupe d'utilisateurs sélectionné ci-dessous sera informée des échecs de connexion / banissements d'adresses IP"
+PLG_SYSTEM_BFSTOP_USERGROUP_LABEL="Groupe d'utilisateurs"
+PLG_SYSTEM_BFSTOP_USERGROUP_DESC="Indiquer le groupe d'utilisateurs à informer des échecs de connexion / banissements d'adresses IP. Cela suppose l'existence dans Joomla d'un groupe d'utilisateurs adapté à cet usage (par exemple, le  groupe 'Super Users')."
+PLG_SYSTEM_BFSTOP_; Ajouté à compter de la version 1.3.0 Beta1
+PLG_SYSTEM_BFSTOP_NOTIFY_USE_PASSWORD_REMINDER_LABEL="Réinitialisation du mot de passe : aide-mémoire"
+PLG_SYSTEM_BFSTOP_NOTIFY_USE_PASSWORD_REMINDER_DESC="Opportunité et modalités de rappel de l'usage de la fonctionnalité de réinitialisation du mot de passe en cas d'échec de connexion"
+PLG_SYSTEM_BFSTOP_REMINDER_NOTIFY_ALWAYS="Toujours"
+PLG_SYSTEM_BFSTOP_REMINDER_NOTIFY_1LEFT="Après 1 échec de connexion"
+PLG_SYSTEM_BFSTOP_REMINDER_NOTIFY_2LEFT="Après 2 échecs de connexion"
+PLG_SYSTEM_BFSTOP_BLOCKED_MSG_SHOWIP_LABEL="Affichage IP"
+PLG_SYSTEM_BFSTOP_BLOCKED_MSG_SHOWIP_DESC="En cas de blocage, indique à l'internaute son adresse IP (telle que relevée par le serveur)"
