--- a/language/it-IT/it-IT.plg_system_bfstop.ini
+++ b/language/it-IT/it-IT.plg_system_bfstop.ini
@@ -1,12 +1,12 @@
-FAILED_LOGIN_ATTEMPT="%s: Tentativo di accesso fallito %s"
-USERNAME="Nome utente"
-IPADDRESS="Indirizzo-IP"
-ERROR="Errore"
-DATETIME="Data e ora"
-ORIGIN="Origine"
-BLOCKED_IP_ADDRESS_BODY="Indirizzo IP Bloccato %1$s perché ci sono stati troppi tentativi di accesso non riusciti in breve tempo su %2$s. Questi sono i tentativi:\n\n%3$s\n\nNota: Questo elenco può contenere più voci rispetto a quelle che hanno causano il blocco attuale. L'elenco può contenere tentativi nel passato che hanno causato già un blocco temporaneo, o tentativi che erano troppo distanti per causare un blocco diretto."
-BLOCKED_IP_ADDRESS_SUBJECT="%s: Indirizzo IP Bloccato %s"
-BLOCKED_IP_MESSAGE="Il tuo indirizzo IP è stato bloccato perché ci sono stati troppi tentativi di accesso non riusciti in breve tempo."
-X_ATTEMPTS_LEFT="Hai ancora %d tentativo(i) prima che il tuo indirizzo IP venga bloccato"
-BLOCKED_SUBJECT="%s: Tentativo di accesso fallito"
-BLOCKED_BODY="Ciao!\n\nQualcuno tenta di accedere con il tuo nome utente al sito web '%s', ma ha usato una password sbagliata.\n Questo è accaduto così tante volte che il sistema, per prevenire abusi, ha bloccato l'accesso all'indirizzo IP da cui i tentativi avevano origine.\n\nNel caso non fossi tu a fare questi tentativi di accesso, ignora questo messaggio. Dovresti essere in grado di effettuare il login come al solito.\nSe sei tu il responsabile di questi tentativi di accesso, e ora ti ricordi la password, o se vuoi usare la funzione 'Reset della Password' hai la possibilità di sbloccare l'indirizzo IP cliccando su questo link:\n%s\n\nCordiali saluti, il gestore automatico del sito\n\nNota: Questo è un messaggio generato automaticamente."
+PLG_SYSTEM_BFSTOP_FAILED_LOGIN_ATTEMPT="%s: Tentativo di accesso fallito %s"
+PLG_SYSTEM_BFSTOP_USERNAME="Nome utente"
+PLG_SYSTEM_BFSTOP_IPADDRESS="Indirizzo-IP"
+PLG_SYSTEM_BFSTOP_ERROR="Errore"
+PLG_SYSTEM_BFSTOP_DATETIME="Data e ora"
+PLG_SYSTEM_BFSTOP_ORIGIN="Origine"
+PLG_SYSTEM_BFSTOP_BLOCKED_IP_ADDRESS_BODY="Indirizzo IP Bloccato %1$s perché ci sono stati troppi tentativi di accesso non riusciti in breve tempo su %2$s. Questi sono i tentativi:\n\n%3$s\n\nNota: Questo elenco può contenere più voci rispetto a quelle che hanno causano il blocco attuale. L'elenco può contenere tentativi nel passato che hanno causato già un blocco temporaneo, o tentativi che erano troppo distanti per causare un blocco diretto."
+PLG_SYSTEM_BFSTOP_BLOCKED_IP_ADDRESS_SUBJECT="%s: Indirizzo IP Bloccato %s"
+PLG_SYSTEM_BFSTOP_BLOCKED_IP_MESSAGE="Il tuo indirizzo IP è stato bloccato perché ci sono stati troppi tentativi di accesso non riusciti in breve tempo."
+PLG_SYSTEM_BFSTOP_X_ATTEMPTS_LEFT="Hai ancora %d tentativo(i) prima che il tuo indirizzo IP venga bloccato"
+PLG_SYSTEM_BFSTOP_BLOCKED_SUBJECT="%s: Tentativo di accesso fallito"
+PLG_SYSTEM_BFSTOP_BLOCKED_BODY="Ciao!\n\nQualcuno tenta di accedere con il tuo nome utente al sito web '%s', ma ha usato una password sbagliata.\n Questo è accaduto così tante volte che il sistema, per prevenire abusi, ha bloccato l'accesso all'indirizzo IP da cui i tentativi avevano origine.\n\nNel caso non fossi tu a fare questi tentativi di accesso, ignora questo messaggio. Dovresti essere in grado di effettuare il login come al solito.\nSe sei tu il responsabile di questi tentativi di accesso, e ora ti ricordi la password, o se vuoi usare la funzione 'Reset della Password' hai la possibilità di sbloccare l'indirizzo IP cliccando su questo link:\n%s\n\nCordiali saluti, il gestore automatico del sito\n\nNota: Questo è un messaggio generato automaticamente."
