--- a/language/it-IT/it-IT.plg_system_bfstop.sys.ini
+++ b/language/it-IT/it-IT.plg_system_bfstop.sys.ini
@@ -1,66 +1,66 @@
 PLG_SYSTEM_BFSTOP="System - Brute Force Stop"
-PLG_BFSTOP_DESC="<h2>Brute Force Stop</h2><div>Questo plugin offre gli strumenti per prevenire i Brute-Force-Attacks sulla vostra installazione Joomla!. A questo scopo, il plugin memorizza le informazioni sui tentativi di accesso non riusciti, in modo che quando si raggiunge un numero configurabile di tentativi di accesso non riusciti l'indirizzo IP dell'aggressore possa essere bloccato. Inoltre, è possibile configurare degli avvisi per i tentativi di accesso non riusciti e gli indirizzi IP bloccati, così come un ritardo di tempo variabile per i tentativi di accesso non riuscito.</div><br /><div><em>Non dimenticare di configurare e pubblicare il plugin dopo l'installazione!</em><br />Se avete domande sul plugin, visitate il <a href='https://github.com/codeling/bfstop'>sito del progetto su GitHub</a>. In caso di problemi quando si utilizza il plugin, non esitate a segnalarli in <a href='https://github.com/codeling/bfstop/issues'>issue tracker</a>!</div><br /><div>Alcune parti di questo plugin sono state ispirate dai seguenti plugin: Login Failed Log, Redirect Failed Logins e Ban IP Address/Range. Grazie e mille per i plugin di questi autori!<br />Brute Force Stop è un Plugin<a target='_blank' href='http://www.joomla.org/'>Joomla!</a>, pubblicato con licenza <a target='_blank' title='GNU General Public License' href='http://www.gnu.org/copyleft/gpl.html'>GNU General Public License</a>.</div>"
-BLOCK_ENABLED_LABEL="Attiva il Blocco"
-BLOCK_ENABLED_DESC="Questo plugin dovrebbe bloccare gli indirizzi IP. Quando disattivato, non verranno aggiunti nuovi indirizzi IP alla lista degli indirizzi bloccati, e nemmeno gli indirizzi IP già presenti in tale lista verranno ancora bloccati (la lista sarà però preservata)."
-USERID_LABEL="Seleziona un utente"
-USERID_DESC="Seleziona l'utente a cui vuoi che siano inviate le notifiche."
-EMAIL_ADDRESS_LABEL="Indirizzo Email"
-EMAIL_ADDRESS_DESC="Inserisci l'Indirizzo Email dove vuoi che le notifiche vengano inviate."
-NOTIFY_FAILED_NUMBER_LABEL="Messaggi falliti per giorno"
-NOTIFY_FAILED_NUMBER_DESC="Quante volte al giorno vuoi che vengano notificati i tentativi di accesso fallito."
-NOTIFY_BLOCKED_NUMBER_LABEL="Messaggi Bloccati per giorno"
-NOTIFY_BLOCKED_NUMBER_DESC="Quante volte al giorno vuoi che vengano notificati gli IP bloccati."
-DELAY_DURATION_LABEL="Ritardo"
-DELAY_DURATION_DESC="Ritardo (in secondi) nel caso di tentativo fallito di accesso."
-LOGLEVEL_LABEL="Registrazione"
-LOGLEVEL_DESC="Determina se deve essere creato un file di log sulle attività del plugin (dovrebbe essere necessario solo in caso di problemi; il file di log si trova nella directory logs con nome plg_system_bfstop.log.php). È inoltre possibile configurare il livello di dettaglio del log: ad esempio, se impostato su ERRORE scriverè nel file di log solo le informazioni sul malfunzionamento."
-BLOCK_NUMBER_LABEL="Soglia del Blocco"
-BLOCK_NUMBER_DESC="Quante volte un accesso non autorizzato può essere provato prima che l'IP venga bloccato."
-BLOCKED_MESSAGE_LABEL="Messaggio Bloccato"
-BLOCKED_MESSAGE_DESC="Il messaggio che vuoi mostrare nella finestra del browser di un utente il cui IP è stato bloccato a causa di troppi tentativi di accesso non riusciti. Se lasciato vuoto, verrà visualizzato il messaggio predefinito: 'Il tuo indirizzo IP è stato bloccato perché ci sono stati troppi tentativi di accesso non riusciti in breve tempo.'"
-BLOCK_DURATION_LABEL="Durata del Blocco"
-BLOCK_DURATION_DESC="Determina per quanto tempo un indirizzo IP viene bloccato prima che venga ripristinato l'accesso al sito"
-NOTIFY_REMAINING_ATTEMPTS_LABEL="Tentativi rimasti"
-NOTIFY_REMAINING_ATTEMPTS_DESC="Attiva o disattiva gli avvisi per i tentativi rimasti; se abilitato, l'utente dopo ogni tentativo di login fallito, vede un messaggio nella form di login su quanti tentativi di accesso gli sono rimasti prima che l'indirizzo IP venga bloccato. Questa impostazione è attiva solo se il Blocco è abilitato (se il Blocco è disattivato, la voce 'residua' non avrebbero senso)."
-NOTIFY_BLOCKED_USER_LABEL="Messaggio di blocco per l'utente"
-NOTIFY_BLOCKED_USER_DESC="Quando è attivata, in caso di un indirizzo IP bloccato, una notifica verrà inviata all'utente che ha cercato di effettuare l'accesso (ovviamente solo nel caso in cui si tratti di un nome utente esistente)."
-USE_HTTP_ERROR_LABEL="Utilizza HTTP Error"
-USE_HTTP_ERROR_DESC="Se abilitato, bfstop invierà il codice si stato 403 (Proibito) se l'IP dell'utente è bloccato."
-ENABLED="abilitato"
-DISABLED="disabilitato"
-NOTIFY_UNLIMITED="illimitato"
-NOTIFY_NEVER="mai"
-BLOCK_UNLIMITED="illimitato"
-BLOCK_5MINUTES="5 Minuti"
-BLOCK_10MINUTES="10 Minuti"
-BLOCK_15MINUTES="15 Minuti"
-BLOCK_30MINUTES="30 Minuti"
-BLOCK_1HOUR="1 Ora"
-BLOCK_2HOURS="2 Ore"
-BLOCK_4HOURS="4 Ore"
-BLOCK_8HOURS="8 Ore"
-BLOCK_24HOURS="1 Giorno"
-BLOCK_1WEEK="1 Settimana"
-BLOCK_30DAYS="30 Giorni"
-MAX_BLOCKS_BEFORE_LABEL="Permanente dopo"
-MAX_BLOCKS_BEFORE_DESC="Determina dopo quanti tentativi bloccati sarà attivato un blocco permanente. Si contano anche i blocchi che sono stati rimossi (cioè sbloccati) con il condice-token; solo gli sblocchi fatti tramite il backend verranno ignorati."
-MAX_BLOCK_NEVER="Mai"
-ENABLED_FOR_ORIGIN_LABEL="Attivo per"
-ENABLED_FOR_ORIGIN_DESC="Determina per quali parti del sito Joomla! il plugin sarà attivo. Se impostato solo per il frontend o per il backend, l'altra parte non sarà considerata per nessuna delle funzionalità (ad esempio se è configurato solo per il backend, i tentativi falliti di accesso dal frontend non saranno registrati; così come gli accessi con successo dal frontend non azzereranno il contatore di accessi falliti). Considera che un blocco ha effetto sempre sull'intero sito, non importa cosa è impostato qui!"
-ENABLED_FOR_FRONTEND="Solo Frontend"
-ENABLED_FOR_BACKEND="Solo Backend"
-ENABLED_FOR_BOTH="Frontend e Backend"
-FATAL="Errore Irreversibile"
-INFO="Messaggio infomrativo"
-DEBUG="Informazioni dettagliate"
-DELETE_OLD_ENTRIES_LABEL="Rimuovere i vecchi tentativi"
-DELETE_OLD_ENTRIES_DESC="Elimina i tentativi di Login falliti più vecchi del numero di settimane fornite in questo campo (impostato a 0 disabilita l'eliminazione delle vecchie voci)."
-ADAPTIVE_DELAY_LABEL="Ritardo adattivo"
-ADAPTIVE_DELAY_DESC="Attiva per adattare il ritardo all'attuale tasso di accessi falliti. Aumenterà il ritardo ogni volta che c'è un aumento del numero di accessi come contromisura per gli attacchi distribuiti."
-ADAPTIVE_DELAY_MAX_LABEL="Ritardo massimo"
-ADAPTIVE_DELAY_MAX_DESC="Il ritardo massimo per la risposta ai tentativi di accesso non riusciti, quando il ritardo adattivo è attivato"
-ADAPTIVE_DELAY_THRSH_MIN_LABEL="Soglia minima"
-ADAPTIVE_DELAY_THRSH_MIN_DESC="La soglia alla quale il ritardo adattivo inizia a entrare in azione (misurata in numero di accessi non riusciti nelle ultime ore)"
-ADAPTIVE_DELAY_THRSH_MAX_LABEL="Soglia massima"
-ADAPTIVE_DELAY_THRSH_MAX_DESC="La soglia alla quale il ritardo adattativo raggiunge il massimo ritardo (misurata in numero di accessi non riusciti nelle ultime ore)"
-DELAY_FIELDSET_LABEL="Ritardo"
+PLG_SYSTEM_BFSTOP_DESC="<h2>Brute Force Stop</h2><div>Questo plugin offre gli strumenti per prevenire i Brute-Force-Attacks sulla vostra installazione Joomla!. A questo scopo, il plugin memorizza le informazioni sui tentativi di accesso non riusciti, in modo che quando si raggiunge un numero configurabile di tentativi di accesso non riusciti l'indirizzo IP dell'aggressore possa essere bloccato. Inoltre, è possibile configurare degli avvisi per i tentativi di accesso non riusciti e gli indirizzi IP bloccati, così come un ritardo di tempo variabile per i tentativi di accesso non riuscito.</div><br /><div><em>Non dimenticare di configurare e pubblicare il plugin dopo l'installazione!</em><br />Se avete domande sul plugin, visitate il <a href='https://github.com/codeling/bfstop'>sito del progetto su GitHub</a>. In caso di problemi quando si utilizza il plugin, non esitate a segnalarli in <a href='https://github.com/codeling/bfstop/issues'>issue tracker</a>!</div><br /><div>Alcune parti di questo plugin sono state ispirate dai seguenti plugin: Login Failed Log, Redirect Failed Logins e Ban IP Address/Range. Grazie e mille per i plugin di questi autori!<br />Brute Force Stop è un Plugin<a target='_blank' href='http://www.joomla.org/'>Joomla!</a>, pubblicato con licenza <a target='_blank' title='GNU General Public License' href='http://www.gnu.org/copyleft/gpl.html'>GNU General Public License</a>.</div>"
+PLG_SYSTEM_BFSTOP_BLOCK_ENABLED_LABEL="Attiva il Blocco"
+PLG_SYSTEM_BFSTOP_BLOCK_ENABLED_DESC="Questo plugin dovrebbe bloccare gli indirizzi IP. Quando disattivato, non verranno aggiunti nuovi indirizzi IP alla lista degli indirizzi bloccati, e nemmeno gli indirizzi IP già presenti in tale lista verranno ancora bloccati (la lista sarà però preservata)."
+PLG_SYSTEM_BFSTOP_USERID_LABEL="Seleziona un utente"
+PLG_SYSTEM_BFSTOP_USERID_DESC="Seleziona l'utente a cui vuoi che siano inviate le notifiche."
+PLG_SYSTEM_BFSTOP_EMAIL_ADDRESS_LABEL="Indirizzo Email"
+PLG_SYSTEM_BFSTOP_EMAIL_ADDRESS_DESC="Inserisci l'Indirizzo Email dove vuoi che le notifiche vengano inviate."
+PLG_SYSTEM_BFSTOP_NOTIFY_FAILED_NUMBER_LABEL="Messaggi falliti per giorno"
+PLG_SYSTEM_BFSTOP_NOTIFY_FAILED_NUMBER_DESC="Quante volte al giorno vuoi che vengano notificati i tentativi di accesso fallito."
+PLG_SYSTEM_BFSTOP_NOTIFY_BLOCKED_NUMBER_LABEL="Messaggi Bloccati per giorno"
+PLG_SYSTEM_BFSTOP_NOTIFY_BLOCKED_NUMBER_DESC="Quante volte al giorno vuoi che vengano notificati gli IP bloccati."
+PLG_SYSTEM_BFSTOP_DELAY_DURATION_LABEL="Ritardo"
+PLG_SYSTEM_BFSTOP_DELAY_DURATION_DESC="Ritardo (in secondi) nel caso di tentativo fallito di accesso."
+PLG_SYSTEM_BFSTOP_LOGLEVEL_LABEL="Registrazione"
+PLG_SYSTEM_BFSTOP_LOGLEVEL_DESC="Determina se deve essere creato un file di log sulle attività del plugin (dovrebbe essere necessario solo in caso di problemi; il file di log si trova nella directory logs con nome plg_system_bfstop.log.php). È inoltre possibile configurare il livello di dettaglio del log: ad esempio, se impostato su ERRORE scriverè nel file di log solo le informazioni sul malfunzionamento."
+PLG_SYSTEM_BFSTOP_BLOCK_NUMBER_LABEL="Soglia del Blocco"
+PLG_SYSTEM_BFSTOP_BLOCK_NUMBER_DESC="Quante volte un accesso non autorizzato può essere provato prima che l'IP venga bloccato."
+PLG_SYSTEM_BFSTOP_BLOCKED_MESSAGE_LABEL="Messaggio Bloccato"
+PLG_SYSTEM_BFSTOP_BLOCKED_MESSAGE_DESC="Il messaggio che vuoi mostrare nella finestra del browser di un utente il cui IP è stato bloccato a causa di troppi tentativi di accesso non riusciti. Se lasciato vuoto, verrà visualizzato il messaggio predefinito: 'Il tuo indirizzo IP è stato bloccato perché ci sono stati troppi tentativi di accesso non riusciti in breve tempo.'"
+PLG_SYSTEM_BFSTOP_BLOCK_DURATION_LABEL="Durata del Blocco"
+PLG_SYSTEM_BFSTOP_BLOCK_DURATION_DESC="Determina per quanto tempo un indirizzo IP viene bloccato prima che venga ripristinato l'accesso al sito"
+PLG_SYSTEM_BFSTOP_NOTIFY_REMAINING_ATTEMPTS_LABEL="Tentativi rimasti"
+PLG_SYSTEM_BFSTOP_NOTIFY_REMAINING_ATTEMPTS_DESC="Attiva o disattiva gli avvisi per i tentativi rimasti; se abilitato, l'utente dopo ogni tentativo di login fallito, vede un messaggio nella form di login su quanti tentativi di accesso gli sono rimasti prima che l'indirizzo IP venga bloccato. Questa impostazione è attiva solo se il Blocco è abilitato (se il Blocco è disattivato, la voce 'residua' non avrebbero senso)."
+PLG_SYSTEM_BFSTOP_NOTIFY_BLOCKED_USER_LABEL="Messaggio di blocco per l'utente"
+PLG_SYSTEM_BFSTOP_NOTIFY_BLOCKED_USER_DESC="Quando è attivata, in caso di un indirizzo IP bloccato, una notifica verrà inviata all'utente che ha cercato di effettuare l'accesso (ovviamente solo nel caso in cui si tratti di un nome utente esistente)."
+PLG_SYSTEM_BFSTOP_USE_HTTP_ERROR_LABEL="Utilizza HTTP Error"
+PLG_SYSTEM_BFSTOP_USE_HTTP_ERROR_DESC="Se abilitato, bfstop invierà il codice si stato 403 (Proibito) se l'IP dell'utente è bloccato."
+PLG_SYSTEM_BFSTOP_ENABLED="abilitato"
+PLG_SYSTEM_BFSTOP_DISABLED="disabilitato"
+PLG_SYSTEM_BFSTOP_NOTIFY_UNLIMITED="illimitato"
+PLG_SYSTEM_BFSTOP_NOTIFY_NEVER="mai"
+PLG_SYSTEM_BFSTOP_BLOCK_UNLIMITED="illimitato"
+PLG_SYSTEM_BFSTOP_BLOCK_5MINUTES="5 Minuti"
+PLG_SYSTEM_BFSTOP_BLOCK_10MINUTES="10 Minuti"
+PLG_SYSTEM_BFSTOP_BLOCK_15MINUTES="15 Minuti"
+PLG_SYSTEM_BFSTOP_BLOCK_30MINUTES="30 Minuti"
+PLG_SYSTEM_BFSTOP_BLOCK_1HOUR="1 Ora"
+PLG_SYSTEM_BFSTOP_BLOCK_2HOURS="2 Ore"
+PLG_SYSTEM_BFSTOP_BLOCK_4HOURS="4 Ore"
+PLG_SYSTEM_BFSTOP_BLOCK_8HOURS="8 Ore"
+PLG_SYSTEM_BFSTOP_BLOCK_24HOURS="1 Giorno"
+PLG_SYSTEM_BFSTOP_BLOCK_1WEEK="1 Settimana"
+PLG_SYSTEM_BFSTOP_BLOCK_30DAYS="30 Giorni"
+PLG_SYSTEM_BFSTOP_MAX_BLOCKS_BEFORE_LABEL="Permanente dopo"
+PLG_SYSTEM_BFSTOP_MAX_BLOCKS_BEFORE_DESC="Determina dopo quanti tentativi bloccati sarà attivato un blocco permanente. Si contano anche i blocchi che sono stati rimossi (cioè sbloccati) con il condice-token; solo gli sblocchi fatti tramite il backend verranno ignorati."
+PLG_SYSTEM_BFSTOP_MAX_BLOCK_NEVER="Mai"
+PLG_SYSTEM_BFSTOP_ENABLED_FOR_ORIGIN_LABEL="Attivo per"
+PLG_SYSTEM_BFSTOP_ENABLED_FOR_ORIGIN_DESC="Determina per quali parti del sito Joomla! il plugin sarà attivo. Se impostato solo per il frontend o per il backend, l'altra parte non sarà considerata per nessuna delle funzionalità (ad esempio se è configurato solo per il backend, i tentativi falliti di accesso dal frontend non saranno registrati; così come gli accessi con successo dal frontend non azzereranno il contatore di accessi falliti). Considera che un blocco ha effetto sempre sull'intero sito, non importa cosa è impostato qui!"
+PLG_SYSTEM_BFSTOP_ENABLED_FOR_FRONTEND="Solo Frontend"
+PLG_SYSTEM_BFSTOP_ENABLED_FOR_BACKEND="Solo Backend"
+PLG_SYSTEM_BFSTOP_ENABLED_FOR_BOTH="Frontend e Backend"
+PLG_SYSTEM_BFSTOP_FATAL="Errore Irreversibile"
+PLG_SYSTEM_BFSTOP_INFO="Messaggio infomrativo"
+PLG_SYSTEM_BFSTOP_DEBUG="Informazioni dettagliate"
+PLG_SYSTEM_BFSTOP_DELETE_OLD_ENTRIES_LABEL="Rimuovere i vecchi tentativi"
+PLG_SYSTEM_BFSTOP_DELETE_OLD_ENTRIES_DESC="Elimina i tentativi di Login falliti più vecchi del numero di settimane fornite in questo campo (impostato a 0 disabilita l'eliminazione delle vecchie voci)."
+PLG_SYSTEM_BFSTOP_ADAPTIVE_DELAY_LABEL="Ritardo adattivo"
+PLG_SYSTEM_BFSTOP_ADAPTIVE_DELAY_DESC="Attiva per adattare il ritardo all'attuale tasso di accessi falliti. Aumenterà il ritardo ogni volta che c'è un aumento del numero di accessi come contromisura per gli attacchi distribuiti."
+PLG_SYSTEM_BFSTOP_ADAPTIVE_DELAY_MAX_LABEL="Ritardo massimo"
+PLG_SYSTEM_BFSTOP_ADAPTIVE_DELAY_MAX_DESC="Il ritardo massimo per la risposta ai tentativi di accesso non riusciti, quando il ritardo adattivo è attivato"
+PLG_SYSTEM_BFSTOP_ADAPTIVE_DELAY_THRSH_MIN_LABEL="Soglia minima"
+PLG_SYSTEM_BFSTOP_ADAPTIVE_DELAY_THRSH_MIN_DESC="La soglia alla quale il ritardo adattivo inizia a entrare in azione (misurata in numero di accessi non riusciti nelle ultime ore)"
+PLG_SYSTEM_BFSTOP_ADAPTIVE_DELAY_THRSH_MAX_LABEL="Soglia massima"
+PLG_SYSTEM_BFSTOP_ADAPTIVE_DELAY_THRSH_MAX_DESC="La soglia alla quale il ritardo adattativo raggiunge il massimo ritardo (misurata in numero di accessi non riusciti nelle ultime ore)"
+PLG_SYSTEM_BFSTOP_DELAY_FIELDSET_LABEL="Ritardo"
