--- a/language/nl-NL/nl-NL.plg_system_bfstop.sys.ini
+++ b/language/nl-NL/nl-NL.plg_system_bfstop.sys.ini
@@ -1,78 +1,78 @@
 PLG_SYSTEM_BFSTOP="Systeem - Brute Force Stop"
-PLG_BFSTOP_DESC="<h2>Brute Force Stop</h2><div>Dit plugin verstrekt middelen om Brute-Force-aanvallen af te wenden op uw Joomla-installatie. Voor dit doel slaat de plugin informatie over mislukte inlogpogingen op, zodat wanneer het bereiken van een configureerbare aantal dergelijke login pogingen is mislukt de aanvallers IP-adres kan worden geblokkeerd. Bovendien kunt u berichten over mislukte aanmeldingen en geblokkeerde IP-adressen configureren, naast een variabele vertraging voor een mislukte login poging.</div><br /><div><em>Vergeet niet de plugin te configureren en te publiceren na de installatie!</em><br />Als u meer wilt over de plugin weten, ga dan naar de <a href='https://github.com/codeling/bfstop'>project site op github</a>. Bij eventuele problemen bij het gebruik van de plugin, aarzel niet om dit te melden in de <a href='https://github.com/codeling/bfstop/issues'>issue tracker</a>!</div><br /><div>In sommige delen is deze plugin geïnspireerd door de volgende plugins: Login Failed Log, Redirect Failed Logins en Ban IP Address/Range. Een bedankje voor de auteurs van deze plugins!<br />Brute Force Stop is een <a target='_blank' href='http://www.joomla.org/'>Joomla!</a> Plugin, gepubliceerd onder de <a target='_blank' title='GNU General Public License' href='http://www.gnu.org/copyleft/gpl.html'>GNU General Public License</a>.</div>"
-BLOCK_ENABLED_LABEL="IP adres blokkering"
-BLOCK_ENABLED_DESC="Of deze plugin blokkeren van IP-adressen moet toepassen. Wanneer uitgeschakeld, zullen geen nieuwe IP-adressen aan de lijst met geblokkeerde adressen worden toegevoegd, en zelfs IP-adressen al op die lijst zullen niet meer worden geblokkeerd (de lijst zelf zal worden bewaard)."
-USERID_LABEL="Selecteer een gebruiker"
-USERID_DESC="Selecteer de gebruiker aan wie meldingen moeten worden verzonden."
-EMAIL_ADDRESS_LABEL="Zelf gekozen email adres(sen)"
-EMAIL_ADDRESS_DESC="Voer het e-mailadres in waar meldingen naartoe moeten worden verzonden. U kunt ook meerdere e-mailadressen opgeven. Scheid deze dan met een punt-komma teken (;)."
-NOTIFY_FAILED_NUMBER_LABEL="Aantal berichten over mislukte aanlogpogingen per dag"
-NOTIFY_FAILED_NUMBER_DESC="Hoe vaak informeren over mislukte aanmeldingen tijdens 1 dag"
-NOTIFY_BLOCKED_NUMBER_LABEL="Aantal berichten over geblokkeerde IP adressen per dag"
-NOTIFY_BLOCKED_NUMBER_DESC="Hoe vaak informeren over geblokkeerde IP adressen gedurende 1 dag."
-DELAY_DURATION_LABEL="Vertraging"
-DELAY_DURATION_DESC="Vertraging (in seconden) na een mislukte aanlogpoging."
-LOGLEVEL_LABEL="Logging"
-LOGLEVEL_DESC="Hiermee bepaalt u of een Logfile over de activiteiten van de plugin moet worden gemaakt (Dit is alleen nodig in geval van een probleem; het logbestand kan worden gevonden in de logs directory onder de naam plg_system_bfstop.log.php)."
-BLOCK_NUMBER_LABEL="Max aantal foutieve pogingen"
-BLOCK_NUMBER_DESC="Hoe vaak mag een foutieve login worden gedaan."
-BLOCKED_MESSAGE_LABEL="Blokkerings bericht"
-BLOCKED_MESSAGE_DESC="Het bericht dat u wilt weergeven in het browservenster van een gebruiker waarvan de IP is geblokkeerd vanwege te veel mislukte inlogpogingen. Als u niets invoert, word dit standaardbericht getoond: 'Uw IP-adres is geblokkeerd omdat er te veel mislukte inlogpogingen in een korte tijd zijn geweest.'"
-BLOCK_DURATION_LABEL="Tijdsduur blokkering"
-BLOCK_DURATION_DESC="Hiermee bepaalt u hoe lang een IP-adres is geblokkeerd voordat het is toegestaan om weer toegang tot de site te krijgen."
-NOTIFY_REMAINING_ATTEMPTS_LABEL="Meld resterende pogingen"
-NOTIFY_REMAINING_ATTEMPTS_DESC="Hiermee kiest u of meldingen over resterende pogingen aan of uit moeten. Indien ingeschakeld dan zal de gebruiker na elke mislukte login poging een bericht zien in het aanmeldingsformulier met hoeveel login pogingen nog beschikbaar zijn voordat het IP-adres wordt geblokkeerd. Deze instelling is alleen actief als blokkeren-functie is ingeschakeld (Als blokkeren is uitgeschakeld, zou 'Resterende pogingen' niet zinvol zijn)."
-NOTIFY_BLOCKED_USER_LABEL="Bestaande gebruiker informeren over blokkade"
-NOTIFY_BLOCKED_USER_DESC="Wanneer ingeschakeld zal in het geval van een geblokkeerd IP-adres, een kennisgeving via email worden verzonden naar de gebruiker die probeert aan te melden (natuurlijk alleen in geval het een bestaande gebruikersnaam is)."
-USE_HTTP_ERROR_LABEL="Stuur 'HTTP Error' foutboodschap"
-USE_HTTP_ERROR_DESC="Indien ingeschakeld zal bfstop een HTTP 403 (Forbidden) antwoord sturen naar het IP adres van de geblokkeerde gebruiker, als deze een aanlogpoging doet."
-ENABLED="ingeschakeld"
-DISABLED="uitgeschakeld"
-NOTIFY_UNLIMITED="onbeperkt"
-NOTIFY_NEVER="nooit"
-BLOCK_UNLIMITED="onbeperkt"
-BLOCK_5MINUTES="5 minuten"
-BLOCK_10MINUTES="10 minuten"
-BLOCK_15MINUTES="15 minuten"
-BLOCK_30MINUTES="30 minuten"
-BLOCK_1HOUR="1 uur"
-BLOCK_2HOURS="2 uur"
-BLOCK_4HOURS="4 uur"
-BLOCK_8HOURS="8 uur"
-BLOCK_24HOURS="1 dag"
-BLOCK_1WEEK="1 Week"
-BLOCK_30DAYS="30 Dagen"
-MAX_BLOCKS_BEFORE_LABEL="Permanent blokkeren na"
-MAX_BLOCKS_BEFORE_DESC="Bepaalt na hoeveel blokkades een IP adres een permanente blokkade moet worden toegekend."
-MAX_BLOCK_NEVER="Nooit"
-ENABLED_FOR_ORIGIN_LABEL="Activeer detectie voor"
-ENABLED_FOR_ORIGIN_DESC="Bepaalt voor welke delen van de site deze plugin actief moet zijn. Als alleen frontend of alleen backend wordt gekozen, dan zal een foutieve aanlogpoging in de back-end NIET gereset worden door een goede aanlogpoging in de frond-end en omgekeerd. Let wel: Als er een blokkade ontstaat is deze wel voor de HELE site. Dus zowel de frond-end als de back-end!"
-ENABLED_FOR_FRONTEND="alleen de front-end"
-ENABLED_FOR_BACKEND="alleen de back-end"
-ENABLED_FOR_BOTH="zowel de front-end als back-end"
-FATAL="Fatale fouten"
-INFO="Informatieve meldingen"
-DEBUG="Gedetailleerde meldingen"
-DELETE_OLD_ENTRIES_LABEL="Verwijder oude foutieve aanlogpogingen na (weken)"
-DELETE_OLD_ENTRIES_DESC="Verwijder foutieve aanlogpogingen ouder dan het aantal weken dat wordt ingegeven in dit veld (gebruik waarde 0 om nooit op te schonen)."
-ADAPTIVE_DELAY_LABEL="Zelflerende vertraging"
-ADAPTIVE_DELAY_DESC="Activeer de zelflerende vertraging zodat deze zich aanpast aan het actuele aantal foutieve aanlogpogingen. De vertraging tussen de logins wordt dan dynamisch in tijd verhoogd als tegenmaatregel tegen bijvoorbeeld een gedistribueerde aanval op uw website."
-ADAPTIVE_DELAY_MAX_LABEL="Maximale vertragingsduur (seconden)"
-ADAPTIVE_DELAY_MAX_DESC="De maximale vertraging (in seconden) die u wilt toestaan. De vertraging wordt dynamisch naar dit maximum opgebouwd afhankelijk van het aantal mislukte aanlogpoging."
-ADAPTIVE_DELAY_THRSH_MIN_LABEL="Start extra vertraging bij"
-ADAPTIVE_DELAY_THRSH_MIN_DESC="De ondergrens (in aantal foutieve aanlogpogingen over laatste uur) voordat de extra vertraging wordt geactiveerd."
-ADAPTIVE_DELAY_THRSH_MAX_LABEL="Stop extra vertraging bij"
-ADAPTIVE_DELAY_THRSH_MAX_DESC="De bovengrens (in aantal foutieve aanlogpogingen over laatste uur) waarboven geen extra vertraging meer wordt toegepast."
-DELAY_FIELDSET_LABEL="Vertraging"
-NOTIFICATION_FIELDSET_LABEL="Informeren"
-GROUP_NOTIFICATION_ENABLED_LABEL="Gebruikersgroep informeren"
-GROUP_NOTIFICATION_ENABLED_DESC="Indien actief, de volledige hierna te selecteren gebruikersgroep zal worden geïnformeerd over de mislukte aanlogpogingen of geblokkeerde IP-adressen."
-USERGROUP_LABEL="Gebruikersgroep"
-USERGROUP_DESC="Kies een gebruikersgroep waarvan alle leden zullen worden geïnformeerd over over de mislukte aanlogpogingen of geblokkeerde IP-adressen (indien hierboven geactiveerd). Het is raadzaam om hiervoor een speciale gebruikersgroep samen te stellen of in ieder geval een groep te kiezen waarin met name systeembeheerders zitten zoals in de standaard 'Super Gebruikers' groep."
-NOTIFY_USE_PASSWORD_REMINDER_LABEL="Geef wachtwoord reset hint"
-NOTIFY_USE_PASSWORD_REMINDER_DESC="Bepaalt of en wanneer een informatieve boodschap gestuurd moet worden als er meerdere malen met een foutief wachtwoord is ingelogd."
-REMINDER_NOTIFY_ALWAYS="altijd"
-REMINDER_NOTIFY_1LEFT="wanneer er nog 1 aanlogpoging over is"
-REMINDER_NOTIFY_2LEFT="wanneer er nog 2 aanlogpogingen over zijn"
-BLOCKED_MSG_SHOWIP_LABEL="Toon IP-adres"
-BLOCKED_MSG_SHOWIP_DESC="Toon het IP-adres van de gebruiker als dat geblokkeerd is geraakt."
+PLG_SYSTEM_BFSTOP_DESC="<h2>Brute Force Stop</h2><div>Dit plugin verstrekt middelen om Brute-Force-aanvallen af te wenden op uw Joomla-installatie. Voor dit doel slaat de plugin informatie over mislukte inlogpogingen op, zodat wanneer het bereiken van een configureerbare aantal dergelijke login pogingen is mislukt de aanvallers IP-adres kan worden geblokkeerd. Bovendien kunt u berichten over mislukte aanmeldingen en geblokkeerde IP-adressen configureren, naast een variabele vertraging voor een mislukte login poging.</div><br /><div><em>Vergeet niet de plugin te configureren en te publiceren na de installatie!</em><br />Als u meer wilt over de plugin weten, ga dan naar de <a href='https://github.com/codeling/bfstop'>project site op github</a>. Bij eventuele problemen bij het gebruik van de plugin, aarzel niet om dit te melden in de <a href='https://github.com/codeling/bfstop/issues'>issue tracker</a>!</div><br /><div>In sommige delen is deze plugin geïnspireerd door de volgende plugins: Login Failed Log, Redirect Failed Logins en Ban IP Address/Range. Een bedankje voor de auteurs van deze plugins!<br />Brute Force Stop is een <a target='_blank' href='http://www.joomla.org/'>Joomla!</a> Plugin, gepubliceerd onder de <a target='_blank' title='GNU General Public License' href='http://www.gnu.org/copyleft/gpl.html'>GNU General Public License</a>.</div>"
+PLG_SYSTEM_BFSTOP_BLOCK_ENABLED_LABEL="IP adres blokkering"
+PLG_SYSTEM_BFSTOP_BLOCK_ENABLED_DESC="Of deze plugin blokkeren van IP-adressen moet toepassen. Wanneer uitgeschakeld, zullen geen nieuwe IP-adressen aan de lijst met geblokkeerde adressen worden toegevoegd, en zelfs IP-adressen al op die lijst zullen niet meer worden geblokkeerd (de lijst zelf zal worden bewaard)."
+PLG_SYSTEM_BFSTOP_USERID_LABEL="Selecteer een gebruiker"
+PLG_SYSTEM_BFSTOP_USERID_DESC="Selecteer de gebruiker aan wie meldingen moeten worden verzonden."
+PLG_SYSTEM_BFSTOP_EMAIL_ADDRESS_LABEL="Zelf gekozen email adres(sen)"
+PLG_SYSTEM_BFSTOP_EMAIL_ADDRESS_DESC="Voer het e-mailadres in waar meldingen naartoe moeten worden verzonden. U kunt ook meerdere e-mailadressen opgeven. Scheid deze dan met een punt-komma teken (;)."
+PLG_SYSTEM_BFSTOP_NOTIFY_FAILED_NUMBER_LABEL="Aantal berichten over mislukte aanlogpogingen per dag"
+PLG_SYSTEM_BFSTOP_NOTIFY_FAILED_NUMBER_DESC="Hoe vaak informeren over mislukte aanmeldingen tijdens 1 dag"
+PLG_SYSTEM_BFSTOP_NOTIFY_BLOCKED_NUMBER_LABEL="Aantal berichten over geblokkeerde IP adressen per dag"
+PLG_SYSTEM_BFSTOP_NOTIFY_BLOCKED_NUMBER_DESC="Hoe vaak informeren over geblokkeerde IP adressen gedurende 1 dag."
+PLG_SYSTEM_BFSTOP_DELAY_DURATION_LABEL="Vertraging"
+PLG_SYSTEM_BFSTOP_DELAY_DURATION_DESC="Vertraging (in seconden) na een mislukte aanlogpoging."
+PLG_SYSTEM_BFSTOP_LOGLEVEL_LABEL="Logging"
+PLG_SYSTEM_BFSTOP_LOGLEVEL_DESC="Hiermee bepaalt u of een Logfile over de activiteiten van de plugin moet worden gemaakt (Dit is alleen nodig in geval van een probleem; het logbestand kan worden gevonden in de logs directory onder de naam plg_system_bfstop.log.php)."
+PLG_SYSTEM_BFSTOP_BLOCK_NUMBER_LABEL="Max aantal foutieve pogingen"
+PLG_SYSTEM_BFSTOP_BLOCK_NUMBER_DESC="Hoe vaak mag een foutieve login worden gedaan."
+PLG_SYSTEM_BFSTOP_BLOCKED_MESSAGE_LABEL="Blokkerings bericht"
+PLG_SYSTEM_BFSTOP_BLOCKED_MESSAGE_DESC="Het bericht dat u wilt weergeven in het browservenster van een gebruiker waarvan de IP is geblokkeerd vanwege te veel mislukte inlogpogingen. Als u niets invoert, word dit standaardbericht getoond: 'Uw IP-adres is geblokkeerd omdat er te veel mislukte inlogpogingen in een korte tijd zijn geweest.'"
+PLG_SYSTEM_BFSTOP_BLOCK_DURATION_LABEL="Tijdsduur blokkering"
+PLG_SYSTEM_BFSTOP_BLOCK_DURATION_DESC="Hiermee bepaalt u hoe lang een IP-adres is geblokkeerd voordat het is toegestaan om weer toegang tot de site te krijgen."
+PLG_SYSTEM_BFSTOP_NOTIFY_REMAINING_ATTEMPTS_LABEL="Meld resterende pogingen"
+PLG_SYSTEM_BFSTOP_NOTIFY_REMAINING_ATTEMPTS_DESC="Hiermee kiest u of meldingen over resterende pogingen aan of uit moeten. Indien ingeschakeld dan zal de gebruiker na elke mislukte login poging een bericht zien in het aanmeldingsformulier met hoeveel login pogingen nog beschikbaar zijn voordat het IP-adres wordt geblokkeerd. Deze instelling is alleen actief als blokkeren-functie is ingeschakeld (Als blokkeren is uitgeschakeld, zou 'Resterende pogingen' niet zinvol zijn)."
+PLG_SYSTEM_BFSTOP_NOTIFY_BLOCKED_USER_LABEL="Bestaande gebruiker informeren over blokkade"
+PLG_SYSTEM_BFSTOP_NOTIFY_BLOCKED_USER_DESC="Wanneer ingeschakeld zal in het geval van een geblokkeerd IP-adres, een kennisgeving via email worden verzonden naar de gebruiker die probeert aan te melden (natuurlijk alleen in geval het een bestaande gebruikersnaam is)."
+PLG_SYSTEM_BFSTOP_USE_HTTP_ERROR_LABEL="Stuur 'HTTP Error' foutboodschap"
+PLG_SYSTEM_BFSTOP_USE_HTTP_ERROR_DESC="Indien ingeschakeld zal bfstop een HTTP 403 (Forbidden) antwoord sturen naar het IP adres van de geblokkeerde gebruiker, als deze een aanlogpoging doet."
+PLG_SYSTEM_BFSTOP_ENABLED="ingeschakeld"
+PLG_SYSTEM_BFSTOP_DISABLED="uitgeschakeld"
+PLG_SYSTEM_BFSTOP_NOTIFY_UNLIMITED="onbeperkt"
+PLG_SYSTEM_BFSTOP_NOTIFY_NEVER="nooit"
+PLG_SYSTEM_BFSTOP_BLOCK_UNLIMITED="onbeperkt"
+PLG_SYSTEM_BFSTOP_BLOCK_5MINUTES="5 minuten"
+PLG_SYSTEM_BFSTOP_BLOCK_10MINUTES="10 minuten"
+PLG_SYSTEM_BFSTOP_BLOCK_15MINUTES="15 minuten"
+PLG_SYSTEM_BFSTOP_BLOCK_30MINUTES="30 minuten"
+PLG_SYSTEM_BFSTOP_BLOCK_1HOUR="1 uur"
+PLG_SYSTEM_BFSTOP_BLOCK_2HOURS="2 uur"
+PLG_SYSTEM_BFSTOP_BLOCK_4HOURS="4 uur"
+PLG_SYSTEM_BFSTOP_BLOCK_8HOURS="8 uur"
+PLG_SYSTEM_BFSTOP_BLOCK_24HOURS="1 dag"
+PLG_SYSTEM_BFSTOP_BLOCK_1WEEK="1 Week"
+PLG_SYSTEM_BFSTOP_BLOCK_30DAYS="30 Dagen"
+PLG_SYSTEM_BFSTOP_MAX_BLOCKS_BEFORE_LABEL="Permanent blokkeren na"
+PLG_SYSTEM_BFSTOP_MAX_BLOCKS_BEFORE_DESC="Bepaalt na hoeveel blokkades een IP adres een permanente blokkade moet worden toegekend."
+PLG_SYSTEM_BFSTOP_MAX_BLOCK_NEVER="Nooit"
+PLG_SYSTEM_BFSTOP_ENABLED_FOR_ORIGIN_LABEL="Activeer detectie voor"
+PLG_SYSTEM_BFSTOP_ENABLED_FOR_ORIGIN_DESC="Bepaalt voor welke delen van de site deze plugin actief moet zijn. Als alleen frontend of alleen backend wordt gekozen, dan zal een foutieve aanlogpoging in de back-end NIET gereset worden door een goede aanlogpoging in de frond-end en omgekeerd. Let wel: Als er een blokkade ontstaat is deze wel voor de HELE site. Dus zowel de frond-end als de back-end!"
+PLG_SYSTEM_BFSTOP_ENABLED_FOR_FRONTEND="alleen de front-end"
+PLG_SYSTEM_BFSTOP_ENABLED_FOR_BACKEND="alleen de back-end"
+PLG_SYSTEM_BFSTOP_ENABLED_FOR_BOTH="zowel de front-end als back-end"
+PLG_SYSTEM_BFSTOP_FATAL="Fatale fouten"
+PLG_SYSTEM_BFSTOP_INFO="Informatieve meldingen"
+PLG_SYSTEM_BFSTOP_DEBUG="Gedetailleerde meldingen"
+PLG_SYSTEM_BFSTOP_DELETE_OLD_ENTRIES_LABEL="Verwijder oude foutieve aanlogpogingen na (weken)"
+PLG_SYSTEM_BFSTOP_DELETE_OLD_ENTRIES_DESC="Verwijder foutieve aanlogpogingen ouder dan het aantal weken dat wordt ingegeven in dit veld (gebruik waarde 0 om nooit op te schonen)."
+PLG_SYSTEM_BFSTOP_ADAPTIVE_DELAY_LABEL="Zelflerende vertraging"
+PLG_SYSTEM_BFSTOP_ADAPTIVE_DELAY_DESC="Activeer de zelflerende vertraging zodat deze zich aanpast aan het actuele aantal foutieve aanlogpogingen. De vertraging tussen de logins wordt dan dynamisch in tijd verhoogd als tegenmaatregel tegen bijvoorbeeld een gedistribueerde aanval op uw website."
+PLG_SYSTEM_BFSTOP_ADAPTIVE_DELAY_MAX_LABEL="Maximale vertragingsduur (seconden)"
+PLG_SYSTEM_BFSTOP_ADAPTIVE_DELAY_MAX_DESC="De maximale vertraging (in seconden) die u wilt toestaan. De vertraging wordt dynamisch naar dit maximum opgebouwd afhankelijk van het aantal mislukte aanlogpoging."
+PLG_SYSTEM_BFSTOP_ADAPTIVE_DELAY_THRSH_MIN_LABEL="Start extra vertraging bij"
+PLG_SYSTEM_BFSTOP_ADAPTIVE_DELAY_THRSH_MIN_DESC="De ondergrens (in aantal foutieve aanlogpogingen over laatste uur) voordat de extra vertraging wordt geactiveerd."
+PLG_SYSTEM_BFSTOP_ADAPTIVE_DELAY_THRSH_MAX_LABEL="Stop extra vertraging bij"
+PLG_SYSTEM_BFSTOP_ADAPTIVE_DELAY_THRSH_MAX_DESC="De bovengrens (in aantal foutieve aanlogpogingen over laatste uur) waarboven geen extra vertraging meer wordt toegepast."
+PLG_SYSTEM_BFSTOP_DELAY_FIELDSET_LABEL="Vertraging"
+PLG_SYSTEM_BFSTOP_NOTIFICATION_FIELDSET_LABEL="Informeren"
+PLG_SYSTEM_BFSTOP_GROUP_NOTIFICATION_ENABLED_LABEL="Gebruikersgroep informeren"
+PLG_SYSTEM_BFSTOP_GROUP_NOTIFICATION_ENABLED_DESC="Indien actief, de volledige hierna te selecteren gebruikersgroep zal worden geïnformeerd over de mislukte aanlogpogingen of geblokkeerde IP-adressen."
+PLG_SYSTEM_BFSTOP_USERGROUP_LABEL="Gebruikersgroep"
+PLG_SYSTEM_BFSTOP_USERGROUP_DESC="Kies een gebruikersgroep waarvan alle leden zullen worden geïnformeerd over over de mislukte aanlogpogingen of geblokkeerde IP-adressen (indien hierboven geactiveerd). Het is raadzaam om hiervoor een speciale gebruikersgroep samen te stellen of in ieder geval een groep te kiezen waarin met name systeembeheerders zitten zoals in de standaard 'Super Gebruikers' groep."
+PLG_SYSTEM_BFSTOP_NOTIFY_USE_PASSWORD_REMINDER_LABEL="Geef wachtwoord reset hint"
+PLG_SYSTEM_BFSTOP_NOTIFY_USE_PASSWORD_REMINDER_DESC="Bepaalt of en wanneer een informatieve boodschap gestuurd moet worden als er meerdere malen met een foutief wachtwoord is ingelogd."
+PLG_SYSTEM_BFSTOP_REMINDER_NOTIFY_ALWAYS="altijd"
+PLG_SYSTEM_BFSTOP_REMINDER_NOTIFY_1LEFT="wanneer er nog 1 aanlogpoging over is"
+PLG_SYSTEM_BFSTOP_REMINDER_NOTIFY_2LEFT="wanneer er nog 2 aanlogpogingen over zijn"
+PLG_SYSTEM_BFSTOP_BLOCKED_MSG_SHOWIP_LABEL="Toon IP-adres"
+PLG_SYSTEM_BFSTOP_BLOCKED_MSG_SHOWIP_DESC="Toon het IP-adres van de gebruiker als dat geblokkeerd is geraakt."
