--- a/language/pt-BR/pt-BR.plg_system_bfstop.sys.ini
+++ b/language/pt-BR/pt-BR.plg_system_bfstop.sys.ini
@@ -1,45 +1,43 @@
 ; Translated over version 0.9.10 by solrac comproperty247(at)gmail.com
 ; www.com-property.site11.com
 ; Saved as UTF-8 - No BOM
-
 PLG_SYSTEM_BFSTOP="Sistema - Brute Force Stop"
-PLG_BFSTOP_DESC="<h2>Brute Force Stop</h2><div>Este plugin fornece meios para evitar o Brute-force login na sua instalação do Joomla. Para este efeito, o plugin armazena informações sobre tentativas de login, de modo que quando se atinge um número configurável de tais tentativas de login falhado, o endereço IP do intruso pode ser bloqueado. Além disso, você pode configurar notificações sobre logins que falharam e endereços IP bloqueados, bem como um adiamento variável para uma tentativa de login falhada.</div><br /><div><em>Não se esqueça de configurar e publicar o plugin após a instalação!</em><br />Se você tiver alguma dúvida sobre o plugin, visite o <a href='https://github.com/codeling/bfstop'>site do projeto no github</a>. Caso haja algum problema ao usar o plugin, não hesite em relatá-los no <a href='https://github.com/codeling/bfstop/issues'>rastreador de problemas</a>!</div><br /><div>Em algumas partes, este plugin foi inspirado pelos seguintes plugins:Login Failed Log, Redirect Failed Logins e Ban IP Address/Range. Muito obrigado aos autores destes plugins!<br />Brute Force Stop é um <a target='_blank' href='http://www.joomla.org/'>Joomla!</a> Plugin, publicado sobre licença <a target='_blank' title='GNU General Public License' href='http://www.gnu.org/copyleft/gpl.html'>GNU General Public License</a>.</div><br /><div>Tradução para portugues realizada por solrac comproperty247(at)gmail.com</div>"
-BLOCK_ENABLED_LABEL="Ativar bloqueio"
-BLOCK_ENABLED_DESC="Se este plugin deve bloquear endereços IP ou não. Quando desativado, não há novos endereços IP serem adicionados à lista de endereços bloqueados, e nem mesmo os endereços IP já nessa lista será mais bloqueado (a própria lista será preservada)."
-USERID_LABEL="Selecione um Usuário"
-USERID_DESC="Selecione o usuário que você gostaria que sejam enviadas notificações."
-EMAIL_ADDRESS_LABEL="Endereço de e-mail"
-EMAIL_ADDRESS_DESC="Digite o endereço de e-mail onde você gostaria de ter notificações a serem enviadas."
-NOTIFY_FAILED_NUMBER_LABEL="Msgs de logins falhados por dia"
-NOTIFY_FAILED_NUMBER_DESC="Quantas vezes para avisar sobre um login falhou durante um dia"
-NOTIFY_BLOCKED_NUMBER_LABEL="Msgs de bloqueio por dia"
-NOTIFY_BLOCKED_NUMBER_DESC="Quantas vezes para avisar sobre um IP bloqueado durante um dia"
-DELAY_DURATION_LABEL="Adiamento"
-DELAY_DURATION_DESC="Adiamento (em segundos) após um login falhado"
-LOGGING_ENABLED_LABEL="Registos"
-
-LOGGING_ENABLED_DESC="Determina se um arquivo de log sobre as atividades do plugin deve ser criado (esta só deve ser necessário em caso de um problema, o arquivo de log pode ser encontrado no diretório de logs com o nome plg_system_bfstop.log.php)"
-BLOCK_NUMBER_LABEL="Limite de bloqueio"
-BLOCK_NUMBER_DESC="Quantas vezes um login pode ser tentado até o IP será bloqueado"
-BLOCKED_MESSAGE_LABEL="Mensagem de bloqueio"
-BLOCKED_MESSAGE_DESC="A mensagem que você gostaria de ver na janela do navegador de um usuário cujo IP foi bloqueado por causa de muitas tentativas de login Se estiver em vazio, esta mensagem padrão será exibida:Seu endereço de IP foi bloqueado porque houve muitas tentativas de login sem sucesso em um curto espaço de tempo. "
-BLOCK_DURATION_LABEL="Duração do bloqueio"
-BLOCK_DURATION_DESC="Determina quanto tempo o endereço IP é bloqueado antes de ser autorizado o acesso ao site novamente"
-NOTIFY_REMAINING_ATTEMPTS_LABEL="Tentativas restantes "
-NOTIFY_REMAINING_ATTEMPTS_DESC="Ativa ou desativa as notificações sobre as tentativas restantes, se habilitado, o usuário, após cada tentativa de login falhada, vê uma mensagem no formulário de login sobre quantas tentativas de login ainda estão disponíveis antes do endereço IP será bloqueado."
-NOTIFY_BLOCKED_USER_LABEL="Mensagem de bloqueio ao usuário"
-NOTIFY_BLOCKED_USER_DESC="Quando ligado, no caso de um endereço IP bloqueado, uma notificação será enviada para o usuário que tentou fazer login (apenas claro no caso, de existir o nome de usuário)."
-ENABLED="ativado"
-DISABLED="desativado"
-NOTIFY_UNLIMITED="ilimitado"
-NOTIFY_NEVER="nunca"
-BLOCK_UNLIMITED="ilimitado"
-BLOCK_5MINUTES="5 Minutos"
-BLOCK_10MINUTES="10 Minutos"
-BLOCK_15MINUTES="15 Minutos"
-BLOCK_30MINUTES="30 Minutos"
-BLOCK_1HOUR="1 Hora"
-BLOCK_2HOURS="2 Horas"
-BLOCK_4HOURS="4 Horas"
-BLOCK_8HOURS="8 Horas"
-BLOCK_24HOURS="1 Dia"
+PLG_SYSTEM_BFSTOP_DESC="<h2>Brute Force Stop</h2><div>Este plugin fornece meios para evitar o Brute-force login na sua instalação do Joomla. Para este efeito, o plugin armazena informações sobre tentativas de login, de modo que quando se atinge um número configurável de tais tentativas de login falhado, o endereço IP do intruso pode ser bloqueado. Além disso, você pode configurar notificações sobre logins que falharam e endereços IP bloqueados, bem como um adiamento variável para uma tentativa de login falhada.</div><br /><div><em>Não se esqueça de configurar e publicar o plugin após a instalação!</em><br />Se você tiver alguma dúvida sobre o plugin, visite o <a href='https://github.com/codeling/bfstop'>site do projeto no github</a>. Caso haja algum problema ao usar o plugin, não hesite em relatá-los no <a href='https://github.com/codeling/bfstop/issues'>rastreador de problemas</a>!</div><br /><div>Em algumas partes, este plugin foi inspirado pelos seguintes plugins:Login Failed Log, Redirect Failed Logins e Ban IP Address/Range. Muito obrigado aos autores destes plugins!<br />Brute Force Stop é um <a target='_blank' href='http://www.joomla.org/'>Joomla!</a> Plugin, publicado sobre licença <a target='_blank' title='GNU General Public License' href='http://www.gnu.org/copyleft/gpl.html'>GNU General Public License</a>.</div><br /><div>Tradução para portugues realizada por solrac comproperty247(at)gmail.com</div>"
+PLG_SYSTEM_BFSTOP_BLOCK_ENABLED_LABEL="Ativar bloqueio"
+PLG_SYSTEM_BFSTOP_BLOCK_ENABLED_DESC="Se este plugin deve bloquear endereços IP ou não. Quando desativado, não há novos endereços IP serem adicionados à lista de endereços bloqueados, e nem mesmo os endereços IP já nessa lista será mais bloqueado (a própria lista será preservada)."
+PLG_SYSTEM_BFSTOP_USERID_LABEL="Selecione um Usuário"
+PLG_SYSTEM_BFSTOP_USERID_DESC="Selecione o usuário que você gostaria que sejam enviadas notificações."
+PLG_SYSTEM_BFSTOP_EMAIL_ADDRESS_LABEL="Endereço de e-mail"
+PLG_SYSTEM_BFSTOP_EMAIL_ADDRESS_DESC="Digite o endereço de e-mail onde você gostaria de ter notificações a serem enviadas."
+PLG_SYSTEM_BFSTOP_NOTIFY_FAILED_NUMBER_LABEL="Msgs de logins falhados por dia"
+PLG_SYSTEM_BFSTOP_NOTIFY_FAILED_NUMBER_DESC="Quantas vezes para avisar sobre um login falhou durante um dia"
+PLG_SYSTEM_BFSTOP_NOTIFY_BLOCKED_NUMBER_LABEL="Msgs de bloqueio por dia"
+PLG_SYSTEM_BFSTOP_NOTIFY_BLOCKED_NUMBER_DESC="Quantas vezes para avisar sobre um IP bloqueado durante um dia"
+PLG_SYSTEM_BFSTOP_DELAY_DURATION_LABEL="Adiamento"
+PLG_SYSTEM_BFSTOP_DELAY_DURATION_DESC="Adiamento (em segundos) após um login falhado"
+PLG_SYSTEM_BFSTOP_LOGGING_ENABLED_LABEL="Registos"
+PLG_SYSTEM_BFSTOP_LOGGING_ENABLED_DESC="Determina se um arquivo de log sobre as atividades do plugin deve ser criado (esta só deve ser necessário em caso de um problema, o arquivo de log pode ser encontrado no diretório de logs com o nome plg_system_bfstop.log.php)"
+PLG_SYSTEM_BFSTOP_BLOCK_NUMBER_LABEL="Limite de bloqueio"
+PLG_SYSTEM_BFSTOP_BLOCK_NUMBER_DESC="Quantas vezes um login pode ser tentado até o IP será bloqueado"
+PLG_SYSTEM_BFSTOP_BLOCKED_MESSAGE_LABEL="Mensagem de bloqueio"
+PLG_SYSTEM_BFSTOP_BLOCKED_MESSAGE_DESC="A mensagem que você gostaria de ver na janela do navegador de um usuário cujo IP foi bloqueado por causa de muitas tentativas de login Se estiver em vazio, esta mensagem padrão será exibida:Seu endereço de IP foi bloqueado porque houve muitas tentativas de login sem sucesso em um curto espaço de tempo. "
+PLG_SYSTEM_BFSTOP_BLOCK_DURATION_LABEL="Duração do bloqueio"
+PLG_SYSTEM_BFSTOP_BLOCK_DURATION_DESC="Determina quanto tempo o endereço IP é bloqueado antes de ser autorizado o acesso ao site novamente"
+PLG_SYSTEM_BFSTOP_NOTIFY_REMAINING_ATTEMPTS_LABEL="Tentativas restantes "
+PLG_SYSTEM_BFSTOP_NOTIFY_REMAINING_ATTEMPTS_DESC="Ativa ou desativa as notificações sobre as tentativas restantes, se habilitado, o usuário, após cada tentativa de login falhada, vê uma mensagem no formulário de login sobre quantas tentativas de login ainda estão disponíveis antes do endereço IP será bloqueado."
+PLG_SYSTEM_BFSTOP_NOTIFY_BLOCKED_USER_LABEL="Mensagem de bloqueio ao usuário"
+PLG_SYSTEM_BFSTOP_NOTIFY_BLOCKED_USER_DESC="Quando ligado, no caso de um endereço IP bloqueado, uma notificação será enviada para o usuário que tentou fazer login (apenas claro no caso, de existir o nome de usuário)."
+PLG_SYSTEM_BFSTOP_ENABLED="ativado"
+PLG_SYSTEM_BFSTOP_DISABLED="desativado"
+PLG_SYSTEM_BFSTOP_NOTIFY_UNLIMITED="ilimitado"
+PLG_SYSTEM_BFSTOP_NOTIFY_NEVER="nunca"
+PLG_SYSTEM_BFSTOP_BLOCK_UNLIMITED="ilimitado"
+PLG_SYSTEM_BFSTOP_BLOCK_5MINUTES="5 Minutos"
+PLG_SYSTEM_BFSTOP_BLOCK_10MINUTES="10 Minutos"
+PLG_SYSTEM_BFSTOP_BLOCK_15MINUTES="15 Minutos"
+PLG_SYSTEM_BFSTOP_BLOCK_30MINUTES="30 Minutos"
+PLG_SYSTEM_BFSTOP_BLOCK_1HOUR="1 Hora"
+PLG_SYSTEM_BFSTOP_BLOCK_2HOURS="2 Horas"
+PLG_SYSTEM_BFSTOP_BLOCK_4HOURS="4 Horas"
+PLG_SYSTEM_BFSTOP_BLOCK_8HOURS="8 Horas"
+PLG_SYSTEM_BFSTOP_BLOCK_24HOURS="1 Dia"
