--- a/language/pt-PT/pt-PT.plg_system_bfstop.ini
+++ b/language/pt-PT/pt-PT.plg_system_bfstop.ini
@@ -2,15 +2,15 @@
 ; www.com-property.site11.com
 ; Saved as UTF-8 - No BOM
 
-FAILED_LOGIN_ATTEMPT="%s: Falha na tentativa de login em %s"
-USERNAME="Nome"
-IPADDRESS="Endereço IP"
-ERROR="Erro"
-DATETIME="Data e hora"
-ORIGEM="Origem"
-BLOCKED_IP_ADDRESS_BODY="%2$s: Endereço IP bloqueado %1$s devido às várias tentativas falhadas para iniciar a sessão em tão pouco tempo. Número de tentativas:\n\n%3$s"
-BLOCKED_IP_ADDRESS_SUBJECT="%s: Bloqueado o endereço IP %s"
-BLOCKED_IP_MESSAGE="Seu endereço de IP %s foi bloqueado porque houve muitas tentativas de login sem sucesso em um curto espaço de tempo."
-X_ATTEMPTS_LEFT="Tem mais %d tentativas(s) antes do seu endereço IP ser bloqueado"
-BLOCKED_SUBJECT="% s: Falha tentativas de login"
-BLOCKED_BODY="Olá!\n\nAlguém tentou entrar com seu nome de usuário no site '%s', mas usou uma senha errada.\nIsto aconteceu tantas vezes, que o sistema bloqueou o acesso a partir deste endereço IP onde estas tentativas de login tiveram origem para evitar o uso indevido.\n\nNo caso que não foi você a fazer essas tentativas de login, por favor, ignore esta mensagem. Você deve ser capaz de acessar apenas como é de costume.\nSe você foi responsável por estas tentativas de login, e você sabe senha novamente ou se você quiser usar a funcionalidade de 'Redefinir senha', você tem a chance de desbloquear o endereço IP, clicando neste link:\n%s\n\nMelhores cumprimentos, a gestão automática site\n\nNote : Esta é uma mensagem gerada automaticamente."
+PLG_SYSTEM_BFSTOP_FAILED_LOGIN_ATTEMPT="%s: Falha na tentativa de login em %s"
+PLG_SYSTEM_BFSTOP_USERNAME="Nome"
+PLG_SYSTEM_BFSTOP_IPADDRESS="Endereço IP"
+PLG_SYSTEM_BFSTOP_ERROR="Erro"
+PLG_SYSTEM_BFSTOP_DATETIME="Data e hora"
+PLG_SYSTEM_BFSTOP_ORIGEM="Origem"
+PLG_SYSTEM_BFSTOP_BLOCKED_IP_ADDRESS_BODY="%2$s: Endereço IP bloqueado %1$s devido às várias tentativas falhadas para iniciar a sessão em tão pouco tempo. Número de tentativas:\n\n%3$s"
+PLG_SYSTEM_BFSTOP_BLOCKED_IP_ADDRESS_SUBJECT="%s: Bloqueado o endereço IP %s"
+PLG_SYSTEM_BFSTOP_BLOCKED_IP_MESSAGE="Seu endereço de IP %s foi bloqueado porque houve muitas tentativas de login sem sucesso em um curto espaço de tempo."
+PLG_SYSTEM_BFSTOP_X_ATTEMPTS_LEFT="Tem mais %d tentativas(s) antes do seu endereço IP ser bloqueado"
+PLG_SYSTEM_BFSTOP_BLOCKED_SUBJECT="% s: Falha tentativas de login"
+PLG_SYSTEM_BFSTOP_BLOCKED_BODY="Olá!\n\nAlguém tentou entrar com seu nome de usuário no site '%s', mas usou uma senha errada.\nIsto aconteceu tantas vezes, que o sistema bloqueou o acesso a partir deste endereço IP onde estas tentativas de login tiveram origem para evitar o uso indevido.\n\nNo caso que não foi você a fazer essas tentativas de login, por favor, ignore esta mensagem. Você deve ser capaz de acessar apenas como é de costume.\nSe você foi responsável por estas tentativas de login, e você sabe senha novamente ou se você quiser usar a funcionalidade de 'Redefinir senha', você tem a chance de desbloquear o endereço IP, clicando neste link:\n%s\n\nMelhores cumprimentos, a gestão automática site\n\nNote : Esta é uma mensagem gerada automaticamente."
