--- a/language/ru-RU/ru-RU.plg_system_bfstop.sys.ini
+++ b/language/ru-RU/ru-RU.plg_system_bfstop.sys.ini
@@ -40,6 +40,8 @@ PLG_SYSTEM_BFSTOP_BLOCK_2HOURS="2 часа"
 PLG_SYSTEM_BFSTOP_BLOCK_4HOURS="4 часа"
 PLG_SYSTEM_BFSTOP_BLOCK_8HOURS="8 часов"
 PLG_SYSTEM_BFSTOP_BLOCK_24HOURS="1 день"
+PLG_SYSTEM_BFSTOP_BLOCK_1WEEK="1 неделя"
+PLG_SYSTEM_BFSTOP_BLOCK_30DAYS="30 дней"
 PLG_SYSTEM_BFSTOP_MAX_BLOCKS_BEFORE_LABEL="Постоянная блокировка после"
 PLG_SYSTEM_BFSTOP_MAX_BLOCKS_BEFORE_DESC="Определяет после которого количества неудачных попыток входа постоянная блокировка будет включена. Блокировки, которые были удалены (т.е. разблокированы) по токену также засчитываются; а те которые сделаны через бэкенд будут игнорироваться."
 PLG_SYSTEM_BFSTOP_MAX_BLOCK_NEVER="Никогда"
@@ -51,3 +53,26 @@ PLG_SYSTEM_BFSTOP_ENABLED_FOR_BOTH="Фронтэнд и бэкэнд"
 PLG_SYSTEM_BFSTOP_FATAL="Фатальная ошибка"
 PLG_SYSTEM_BFSTOP_INFO="Информационное сообщение"
 PLG_SYSTEM_BFSTOP_DEBUG="Детальная информация"
+PLG_SYSTEM_BFSTOP_DELETE_OLD_ENTRIES_LABEL="Сокращение числа старых попыток"
+PLG_SYSTEM_BFSTOP_DELETE_OLD_ENTRIES_DESC="Удаление неудачных попыток входа старше, чем количество недель, установленное в этом поле (установите 0, чтобы отключить удаление старых записей)."
+PLG_SYSTEM_BFSTOP_ADAPTIVE_DELAY_LABEL="Адаптивная задержка"
+PLG_SYSTEM_BFSTOP_ADAPTIVE_DELAY_DESC="Активация адаптивной задержки текущему темпу неудачных попыток входа в систему. Задержка увеличится, когда будет наблюдаться повышенное количество попыток входа, в качестве контрмеры для распределенных атак."
+PLG_SYSTEM_BFSTOP_ADAPTIVE_DELAY_MAX_LABEL="Максимальная задержка"
+PLG_SYSTEM_BFSTOP_ADAPTIVE_DELAY_MAX_DESC="Максимальная задержка ответа на неудачные попытки входа в систему, когда адаптивная задержка включена"
+PLG_SYSTEM_BFSTOP_ADAPTIVE_DELAY_THRSH_MIN_LABEL="Минимальный предел"
+PLG_SYSTEM_BFSTOP_ADAPTIVE_DELAY_THRSH_MIN_DESC="Порог, при котором адаптивная задержка начинает увеличиваться (измеряется в количестве неудачных попыток входа за последний час)"
+PLG_SYSTEM_BFSTOP_ADAPTIVE_DELAY_THRSH_MAX_LABEL="Максимальный предел"
+PLG_SYSTEM_BFSTOP_ADAPTIVE_DELAY_THRSH_MAX_DESC="Порог, при котором адаптивная задержка достигает максимальную задержку (измеряется в количестве неудачных попыток входа за последний час)"
+PLG_SYSTEM_BFSTOP_DELAY_FIELDSET_LABEL="Задержка"
+PLG_SYSTEM_BFSTOP_NOTIFICATION_FIELDSET_LABEL="Уведомление"
+PLG_SYSTEM_BFSTOP_GROUP_NOTIFICATION_ENABLED_LABEL="Уведомление группы пользователей"
+PLG_SYSTEM_BFSTOP_GROUP_NOTIFICATION_ENABLED_DESC="Если включено, группы пользователей, выбранные ниже, будут оповещены в случае неудачных входов/блокировки IP-адреса"
+PLG_SYSTEM_BFSTOP_USERGROUP_LABEL="Группа пользователей"
+PLG_SYSTEM_BFSTOP_USERGROUP_DESC="Выберите группу, чтобы уведомить всех её участников о неудачных входах и запрещённых IP-адресов (если активирована выше). Вероятно, Вам нужно будет создать отдельную группу для этого, или использовать группу, которая содержит только наиболее опытных администраторов, подобно группе по умолчанию 'супер-пользователи'."
+PLG_SYSTEM_BFSTOP_NOTIFY_USE_PASSWORD_REMINDER_LABEL="Напоминание о сбросе пароля"
+PLG_SYSTEM_BFSTOP_NOTIFY_USE_PASSWORD_REMINDER_DESC="Будет ли и когда отображаться напоминание об использовании функции 'восстановление пароля' при неудачной попытке входа"
+PLG_SYSTEM_BFSTOP_REMINDER_NOTIFY_ALWAYS="Всегда"
+PLG_SYSTEM_BFSTOP_REMINDER_NOTIFY_1LEFT="Когда осталась 1 попытка"
+PLG_SYSTEM_BFSTOP_REMINDER_NOTIFY_2LEFT="Когда осталось 2 попытки"
+PLG_SYSTEM_BFSTOP_BLOCKED_MSG_SHOWIP_LABEL="Показывать IP"
+PLG_SYSTEM_BFSTOP_BLOCKED_MSG_SHOWIP_DESC="При блокировании, показывать пользователю его IP-адрес (предполагаемый сервером)"
