--- a/language/ru-RU/ru-RU.plg_system_bfstop.ini
+++ b/language/ru-RU/ru-RU.plg_system_bfstop.ini
@@ -7,7 +7,7 @@ PLG_SYSTEM_BFSTOP_ORIGIN="Источник"
 PLG_SYSTEM_BFSTOP_BLOCKED_IP_ADDRESS_BODY="IP адрес %1$s был заблокирован, так как с него было слишком много неудачных попыток входа на сайт %2$s \n\n%3$s"
 PLG_SYSTEM_BFSTOP_BLOCKED_IP_ADDRESS_SUBJECT="%s: IP адрес %s заблокирован"
 PLG_SYSTEM_BFSTOP_BLOCKED_IP_MESSAGE="Ваш IP адрес будет заблокирован, потому что было слишком много неудачных попыток входа в течение короткого времени."
-PLG_SYSTEM_BFSTOP_X_ATTEMPTS_LEFT="У вас осталось %d попытки(а) до того как ваш IP адрес будет заблокирован"
+PLG_SYSTEM_BFSTOP_X_ATTEMPTS_LEFT="У Вас осталось %d попытки(а) до того как ваш IP адрес будет заблокирован"
 PLG_SYSTEM_BFSTOP_BLOCKED_SUBJECT="%s: Неудачные попытки входа"
 PLG_SYSTEM_BFSTOP_BLOCKED_BODY="Привет!\n\nКто-то пытался войти под Вашим именем на сайт '%s', но ввел неправильный пароль.\nЭто произошло так много раз, что система заблокировала IP-адрес, с которого эти попытки входа возникали для предотвращения взлома.\n\nВ случае, если эти попытки входа делали не Вы, не обращайте внимания на это сообщение. Вы сможете войти в на сайт как обычно.\nЕсли это Вы пытались войти и забыли пароль, или хотите использовать функцию "Сброс пароля", у вас есть шанс разблокировать IP адрес, нажав на эту ссылку:\n%s\n\nС уважением, система Brute Force Stop\n\nP.S.: Это сообщение сгенерировано автоматически."
 PLG_SYSTEM_BFSTOP_PASSWORD_RESET_RECOMMENDED="Было замечено, что одна или несколько Ваших попыток входа в систему в последнее время завершились неудачей. При очередной попытке, вскоре Вы будете заблокированы. Поэтому рекомендуется использовать <a href="%1$s">функцию восстановления пароля</a>!"
